Add better user status for online status.

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -246,3 +246,9 @@ COM_KUNENA_RANK_BLOCKED="User is blocked"
 
 COM_KUNENA_STATISTICS="Statistics"
 COM_KUNENA_MEMBERS="Members"
+
+COM_KUNENA_ONLINE="Online"
+COM_KUNENA_AWAY="Away"
+COM_KUNENA_BUSY="Busy"
+COM_KUNENA_INVISIBLE="Invisible"
+COM_KUNENA_OFFLINE="Offline"
