--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -125,6 +125,8 @@ COM_KUNENA_YES="Yes"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="The extensions allowed for avatar upload are : %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
 COM_KUNENA_NEW="New"
+COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR="Failed to move avatar file to media directory"
+COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION="Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
