--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -243,3 +243,5 @@ COM_KUNENA_LIB_TIME_AGO="%s ago"
 COM_KUNENA_MYPROFILE_LASTLOGIN="Last login"
 COM_KUNENA_VIEW_BLOCKED="Blocked"
 COM_KUNENA_RANK_BLOCKED="User is blocked"
+
+COM_KUNENA_TEASER_TEXT="Please login to view the answers"
