--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -487,6 +487,8 @@ COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to se
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Userlist Settings"
+COM_KUNENA_TEASER="Hide Replies For Guests"
+COM_KUNENA_TEASER_DESC="When enabled, users must be login before reading the answers."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
