--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -246,3 +246,6 @@ COM_KUNENA_RANK_BLOCKED="User is blocked"
 
 COM_KUNENA_STATISTICS="Statistics"
 COM_KUNENA_MEMBERS="Members"
+
+COM_KUNENA_FILTERACTIVE="Filter"
+COM_KUNENA_FIELD_LABEL_FILTERCLEAR="Clear"
