--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -43,6 +43,8 @@ COM_KUNENA_LIB_BBCODE_SPOILER_EXPAND="[ Click to expand ]"
 COM_KUNENA_LIB_BBCODE_SPOILER_HIDE="[ Click to hide ]"
 COM_KUNENA_POST_WROTE="wrote"
 COM_KUNENA_LIB_BBCODE_QUOTE_TITLE="Quote:"
+COM_KUNENA_LIB_BBCODE_EBAY_LABEL_BUY_IT_NOW="Buy It Now"
+COM_KUNENA_LIB_BBCODE_EBAY_LABEL_COMPLETED="Completed"
 
 ; JROOT/administrator/components/com_kunena/libraries/bbcode/editor.
 
