Email addresses in posts are cloaked, Joomla cloaking disabled #2427

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -460,6 +460,8 @@ COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
+COM_KUNENA_CONFIGURATION_CLOAKEMAIL_LABEL="Email cloaking in messages"
+COM_KUNENA_CONFIGURATION_CLOAKEMAIL_DESC="Email cloaking in messages"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
