--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -430,7 +430,7 @@ COM_KUNENA_SHOWWHOIS="Show Who is Online"
 COM_KUNENA_SHOWWHOISDESC="If you want to show Whois Online, select <em>Yes</em>."
 COM_KUNENA_SHOW_ANNOUNCEMENT="Show Announcement"
 COM_KUNENA_SHOW_ANNOUNCEMENT_DESC="Set to <em>Yes</em> if you want to show the announcement box on your forum home page."
-COM_KUNENA_SHOW_AVATAR_ON_CAT="Show Avatar on Categoriy Index and Recent Topics"
+COM_KUNENA_SHOW_AVATAR_ON_CAT="Show Avatar on Category Index and Recent Topics"
 COM_KUNENA_SHOW_AVATAR_ON_CAT_DESC="Set to <em>Yes</em> if you want to show user avatar on Category Index, Recent Topics and My Topics."
 COM_KUNENA_SHOW_CHILD_CATEGORY_ON_LIST="Show Sub-Category Image"
 COM_KUNENA_SHOW_CHILD_CATEGORY_ON_LIST_DESC="If you want to show sub-category small icon on your Category Index, set to <em>Yes</em>."
