--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -528,9 +528,9 @@ COM_KUNENA_CPANEL_DESC_HOWTOSETUP="Faq: How to Setup"
 COM_KUNENA_CPANEL_DESC_KNOWNINGERRORS="Faq: What are the knowing errors"
 COM_KUNENA_CPANEL_DESC_FREEORPAIDSUPPORT="Faq: Free or Paid Support"
 COM_KUNENA_CPANEL_LABEL_CLEANUP_IP="Cleanup IP Addresses"
-COM_KUNENA_CPANEL_DESC_CATEGORIES="Faq: Setup categories"
+COM_KUNENA_CPANEL_DESC_CATEGORIES="Faq: Setup Categories"
 COM_KUNENA_CPANEL_DESC_SUPPORT="Faq: Get Support"
-COM_KUNENA_CPANEL_LABEL_MOREINFO="More info"
+COM_KUNENA_CPANEL_LABEL_MOREINFO="More Info"
 
 
 ; JROOT/administrator/components/com_kunena/views/ranks/
