Change language string: The administrator has disabled public write access
part2

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
@@ -125,6 +125,12 @@ COM_KUNENA_SELECT_CATEGORY="- Select Category -"
 COM_KUNENA_VIEW_DISABLED="The administrator has disabled public write access."
 COM_KUNENA_VIEW_TOPICS_DEFAULT="Topic: %s"
 COM_KUNENA_VIEW_TOPIC_ERROR_LOOP="Internal Error: Loop detected in moved topics!"
+COM_KUNENA_LOGIN_PLEASE="Please"
+COM_KUNENA_LOGIN_SIGNIN="sign in"
+COM_KUNENA_LOGIN_OR=" or"
+COM_KUNENA_LOGIN_CREATE="create"
+COM_KUNENA_LOGIN_ACCOUNT=" an account"
+COM_KUNENA_LOGIN_JOIN=" to join the conversation."
 
 ; JROOT/components/com_kunena/views/topics/
 
