--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -461,7 +461,7 @@ COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to se
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="eBay AppID key"
-COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on your ebay developper account, you need to register on https://go.developer.ebay.com/ in order to get the AppID"
+COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on your ebay developer account, you need to register on https://go.developer.ebay.com/ in order to get the AppID"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
