[K3.1] Crypsis: No button for [HR] in editor #1476
also added tweet icon

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -104,6 +104,7 @@ COM_KUNENA_EDITOR_TABLE="Table"
 COM_KUNENA_EDITOR_ULIST="Unordered List"
 COM_KUNENA_EDITOR_UNDERL="Underline"
 COM_KUNENA_EDITOR_VIDEO="Video"
+COM_KUNENA_EDITOR_HR="Horizontal line"
 
 ; JROOT/administrator/components/com_kunena/libraries/controller.php
 
