[K3.1] Crypsis: Update editor

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -253,3 +253,6 @@ COM_KUNENA_MEMBERS="Members"
 COM_KUNENA_FILTERACTIVE="Filter"
 COM_KUNENA_FIELD_LABEL_FILTERCLEAR="Clear"
 
+COM_KUNENA_TOPIC_VOTE_RESULTS="Results"
+COM_KUNENA_EDITOR_HR="Horizontal line"
+COM_KUNENA_EDITOR_HELPLINE_HR="Horizontal line: [hr]"
