improve language string notice

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -485,7 +485,7 @@ COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Userlist Settings"
 COM_KUNENA_CFG_SEARCH_TIME="Search Time"
-COM_KUNENA_CFG_SEARCH_TIME_DESC="Set the default search time"
+COM_KUNENA_CFG_SEARCH_TIME_DESC="Set the default search time <em>Big Sites must be set max year, because performance issues</em>"
 COM_KUNENA_CFG_SEARCH_DATE_2WEEKS="2 weeks ago"
 COM_KUNENA_CFG_SEARCH_DATE_3MONTHS="3 months ago"
 COM_KUNENA_CFG_SEARCH_DATE_6MONTHS="6 months ago"
