--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -351,6 +351,7 @@ COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
 COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
 COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Ban History"
 COM_KUNENA_TITLE_MODERATE_TAB_NEW_BAN="New Ban"
+COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB="MB"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
