--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
@@ -167,3 +167,4 @@ COM_KUNENA_VIEW_USER_EDIT_AUTH_FAILED="You are not allowed to edit user %s."
 COM_KUNENA_VIEW_USER_LIST="User List"
 COM_KUNENA_LOGIN_SECRETKEY="Secret Key"
 COM_KUNENA_USER_CANSUBSCRIBE="Select subscription as default"
+COM_KUNENA_USER_USERLISTTIME="Select the time limit for pages"
