--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -262,3 +262,11 @@ COM_KUNENA_FIELD_LABEL_FILTERCLEAR="Clear"
 COM_KUNENA_TOPIC_VOTE_RESULTS="Results"
 COM_KUNENA_EDITOR_HR="Horizontal line"
 COM_KUNENA_EDITOR_HELPLINE_HR="Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE="Online"
+COM_KUNENA_AWAY="Away"
+COM_KUNENA_BUSY="Busy"
+COM_KUNENA_INVISIBLE="Invisible"
+COM_KUNENA_OFFLINE="Offline"
+COM_KUNENA_UNKNOWN_STATUS="Unknown Status"
+COM_KUNENA_STATUS_TOOLONG="Status Text is too long."
