[K3.1] Crypsis: Language update settings backend

--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -205,6 +205,15 @@ COM_KUNENA_EDITOR_EMOTICONS_LABEL="Emoticons"
 COM_KUNENA_TOPICLIST_AUTHOR_LABEL="Author"
 COM_KUNENA_EDITOR_SMILIES="Smilies"
 COM_KUNENA_EDITOR_HELPLINE_SMILIES="Select a smiley in the list below or use emojis in the textarea"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR="Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC="Select the Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE="White"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK="Black"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH="Message title length"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU="Show menu"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Show menu on the forum"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC="Max. message title length in message"
+
 
 ; Removed strings
 
