update language string

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -270,3 +270,4 @@ COM_KUNENA_INVISIBLE="Invisible"
 COM_KUNENA_OFFLINE="Offline"
 COM_KUNENA_UNKNOWN_STATUS="Unknown Status"
 COM_KUNENA_STATUS_TOOLONG="Status Text is too long."
+COM_KUNENA_STATUS_SAVED="Successfully Saved Status Text"
