--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -503,6 +503,10 @@ COM_KUNENA_TEASER="Hide Replies For Guests"
 COM_KUNENA_TEASER_DESC="When enabled, users must be login before reading the answers."
 COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="eBay AppID key"
 COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on your ebay developer account, you need to register on https://go.developer.ebay.com/ in order to get the AppID"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_LABEL="The Twitter consumer key"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_DESC="The Twitter consumer key to connect to API"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="The Twitter consumer secret"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="The Twitter consumer secret to connect to API"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
