--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -104,6 +104,31 @@ COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME="Enter the name of author"
 COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT="Maximum File Size"
 COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT="Maximum Image File Size"
 
+; JROOT/components/com_kunena/template/crypsis/layouts/topic/edit/editor/default.php
+
+COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Map Settings"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Type"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="City"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terrain"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satellite"
+COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Code Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Picture Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Size"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Size"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Width"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Height"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
+
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
 COM_KUNENA_POST_TOPIC_HISTORY="Topic History of"
