--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -727,7 +727,6 @@ COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_BODY="Server was unreachable or action took t
 COM_KUNENA_AJAXMODAL_ERROR_CANCEL_HEADER="Task Cancelled"
 COM_KUNENA_AJAXMODAL_ERROR_ABORT_BODY="Task was aborted."
 COM_KUNENA_AJAXMODAL_ERROR_ABORT_HEADER="Malformed Response"
-COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_HEADER="Unexpected Error"
 COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_BODY="Maybe you reloaded the page?"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/syncusers.php
@@ -739,6 +738,8 @@ COM_KUNENA_SYNC_USERS_DEL_DESC="Kunena does not remove user profiles from delete
 COM_KUNENA_SYNC_USERS_OPTIONS="Options"
 COM_KUNENA_SYNC_USERS_RENAME="Update user names in messages"
 COM_KUNENA_SYNC_USERS_RENAME_DESC="This option will reset all author names in posts to username or real name depending on your Kunena configuration."
+COM_KUNENA_SYNC_USERS_DELLIFE="Delete lifetime ban users"
+COM_KUNENA_SYNC_USERS_DELLIFE_DESC="Delete all lifetime ban users. <em><b>All blocked joomla users will be deleted !!</b></em>"
 
 ; JROOT/administrator/components/com_kunena/views/tools/view.html.php
 
