--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -274,3 +274,4 @@ COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
 COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
 COM_KUNENA_STATUS_TYP = "Type your message below"
 COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+COM_KUNENA_GO_TO_EDITOR="Go to editor.."
