--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -128,6 +128,8 @@ COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
 COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
 COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
 COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
+COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Add"
+COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
