--- a/components/com_kunena/admin/language/en-GB/en-GB.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.plg_kunena_community.sys.ini
@@ -32,9 +32,9 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_POINTS_LIMIT="Earn Points Limit"
 PLG_KUNENA_COMMUNITY_ACTIVITY_POINTS_LIMIT_DESC="Minimum characters in message to earn points."
 PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT="Activity Stream Limit"
 PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT_DESC="0 for unlimited, otherwise the activity stream message will get limited to the number of characters entered here. Setting has only effect at time of posting. Once an activity stream entry has been written it cannot be updated."
-
 PLG_KUNENA_COMMUNITY_ACTIVITY_POST_TITLE="created a new topic '%s' in the forum."
 
+PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE="replied to the topic '%s' in the forum."
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE_ACT="{actor} replied to the topic {title} in the forum."
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_WALL="<a href=\"%s\">%s</a> replied to the topic <a href=\"%s\">%s</a> in the forum"
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="Hello {target},\n\n <b>{actor}</b> just replied to a topic  <strong>{title}</strong>\n\nURL:\n\n\n<a href="_QQ_"{url}"_QQ_">{url}</a>"
@@ -42,5 +42,6 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="Hello {target},\n\n <b>{actor}</b> jus
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE_ACT="{actor} thanked you in topic {title}."
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_WALL="<a href=\"%s\">%s</a> thanked <a href=\"%s\">%s</a> in topic <a href=\"%s\">%s</a>"
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TEXT="Hi {target},\nUser {actor} thanked you for the post in topic {title}. \nURL: \n\n <a href="_QQ_"{url}"_QQ_">{url}</a>"
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="thanks user '%s' in the forum message '%s'."
 
 COM_KUNENA_INTEGRATION_TYPE_JOMSOCIAL="JomSocial"
