--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -91,6 +91,8 @@ COM_KUNENA_A_CATEGORY_CFG_OPTION_NEVER="Never in Category Index"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SECTION="Up to Section Level"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_CATEGORY="Up to Category Level"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SUBCATEGORY="Up to Sub-Category Level"
+COM_KUNENA_ICON="Category Icon:"
+COM_KUNENA_ICON_DESC="Enter here the class for your icon. Example <strong>icon-home</strong>"
 
 ; JROOT/administrator/components/com_kunena/views/categories/tmpl/default.php
 
