--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -189,6 +189,7 @@ COM_KUNENA_PASS = "Password:"
 COM_KUNENA_POLLUSERS_MORE = "See more"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Add Poll Option"
 COM_KUNENA_POLL_BUTTON_VOTE = "Vote"
+COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
 COM_KUNENA_POLL_NAME = "Poll:"
 COM_KUNENA_POLL_NOT_LOGGED = "Only registered users can participate to this poll"
 COM_KUNENA_POLL_NO_VOTE = "No votes"
