[K3.1] Backend Feature: add option to remove subscriptions #2805

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -64,7 +64,7 @@ COM_KUNENA_ATTACHMENTS_FIELD_LABEL_TYPE="Type"
 COM_KUNENA_ATTACHMENTS_FIELD_LABEL_SIZE="Size"
 COM_KUNENA_ATTACHMENTS_FIELD_LABEL_MESSAGE="Message"
 
-; JROOT/administrator/components/com_kunena/views/c
+; JROOT/administrator/components/com_kunena/views
 COM_KUNENA_C_FORUM="Category Manager"
 COM_KUNENA_C_KCONFIG="Forum Configuration"
 COM_KUNENA_C_SUPPORT="Support Web Site"
@@ -852,6 +852,8 @@ COM_KUNENA_TOPIC_SUBSCRIPTIONS="Topic Subscriptions"
 COM_KUNENA_UAVATAR="User avatar:"
 COM_KUNENA_USERIDUSED="There are other users using the same IP address: %s"
 COM_KUNENA_USER_LABEL_FORUM_SETTINGS="Forum Settings"
+COM_KUNENA_REMOVE_CATSUBSCRIPTIONS="Delete all category subscriptions"
+COM_KUNENA_REMOVE_TOPICSUBSCRIPTIONS="Delete all topic subscriptions"
 
 ; JROOT/administrator/components/com_kunena/views/users/tmpl/move.php
 
