--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -829,6 +829,10 @@ COM_KUNENA_USERS_LABEL_ENABLED="Enabled"
 COM_KUNENA_USERS_LABEL_BLOCKED="Blocked"
 COM_KUNENA_USERS_LABEL_BANNED="Banned"
 COM_KUNENA_USERS_LABEL_NOT_BANNED="Not banned"
+COM_KUNENA_REMOVE_CATSUBSCRIPTIONS="Delete all category subscriptions"
+COM_KUNENA_REMOVE_TOPICSUBSCRIPTIONS="Delete all topic subscriptions"
+COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="All topic subscriptions are deleted"
+COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="All category subscriptions are deleted"
 
 ; JROOT/administrator/components/com_kunena/views/user/tmpl/edit.php
 
@@ -852,8 +856,6 @@ COM_KUNENA_TOPIC_SUBSCRIPTIONS="Topic Subscriptions"
 COM_KUNENA_UAVATAR="User avatar:"
 COM_KUNENA_USERIDUSED="There are other users using the same IP address: %s"
 COM_KUNENA_USER_LABEL_FORUM_SETTINGS="Forum Settings"
-COM_KUNENA_REMOVE_CATSUBSCRIPTIONS="Delete all category subscriptions"
-COM_KUNENA_REMOVE_TOPICSUBSCRIPTIONS="Delete all topic subscriptions"
 
 ; JROOT/administrator/components/com_kunena/views/users/tmpl/move.php
 
