--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.sys.ini
@@ -31,6 +31,12 @@ COM_KUNENA_SYS_BUTTON_FILTERRESET="Reset"
 COM_KUNENA="Kunena Forum"
 COM_KUNENA_XML_DESCRIPTION="Kunena Forum"
 
+; JROOT/administrator/components/com_kunena/users/
+
+COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="All topic subscriptions are deleted"
+COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="All category subscriptions are deleted"
+
+
 ; JROOT/components/com_kunena/views/**/*.xml
 
 COM_KUNENA_ATTRIBS_MAIN_SETTINGS_LABEL="Main Settings"
