[K4.0] Backend: Update tabs css, Edit templates improvements

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -662,6 +662,10 @@ COM_KUNENA_A_TEMPLATE_MANAGER_DETAILS="Details"
 COM_KUNENA_A_TEMPLATE_MANAGER_EDIT_TEMPLATE="Edit Template"
 COM_KUNENA_A_TEMPLATE_MANAGER_NO_PARAMETERS="No Parameters"
 COM_KUNENA_A_TEMPLATE_MANAGER_PARAMETERS="Parameters"
+COM_KUNENA_A_TEMPLATE_MANAGER_INFO="Information"
+COM_KUNENA_A_TEMPLATE_MANAGER_BASIC="Basic Settings"
+COM_KUNENA_A_TEMPLATE_MANAGER_FEATURES="Features"
+COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
