[K4.0] Beta: Update strings and disable not working features

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -906,3 +906,5 @@ COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="Secret key"
 
 COM_KUNENA_TRASH_LAST_MESSAGE="Last Message"
 
+; Temp Beta strings
+COM_KUNENA_FEATURE_NOT_AVAILABLE_IN_BETA="This feature is disabled in this beta"
