--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -666,6 +666,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_INFO="Information"
 COM_KUNENA_A_TEMPLATE_MANAGER_BASIC="Basic Settings"
 COM_KUNENA_A_TEMPLATE_MANAGER_FEATURES="Features"
 COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
+COM_KUNENA_A_TEMPLATE_MANAGER_COLORS="Colors"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
