--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -242,6 +242,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
 COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
 COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remeber the data from your messages, on crashes or move data from quickreply to editor"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
 
 ; Removed strings
 
