--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -214,7 +214,7 @@ COM_KUNENA_A_FORUM_JUMP="Enable Category Jump"
 COM_KUNENA_A_FORUM_JUMP_DESC="If set to <em>Yes</em>, a selector will be shown on the forum pages that allows for a quick jump to another category."
 COM_KUNENA_A_FRONTEND="Frontend"
 COM_KUNENA_A_GHOSTMESSAGE="Check Shadow Topic Box"
-COM_KUNENA_A_GHOSTMESSAGE_DESC="Set to <em>Yes</em> if you want the post shadow topic box to be checked bey default."
+COM_KUNENA_A_GHOSTMESSAGE_DESC="Set to <em>Yes</em> if you want the post shadow topic box to be checked by default."
 COM_KUNENA_A_HIGHLIGHTCODE="Enable Code Highlighting"
 COM_KUNENA_A_HIGHLIGHTCODE_DESC="Enables the Kunena code tag highlighting Javascript. If your members post PHP or other code fragments within code tags, turning this on will colorize the code. If your forum does not make use of such programming language posts, you might want to turn it off to avoid code tags from becoming malformed."
 COM_KUNENA_A_HISTLIM="History Limit"
