--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "CSS suffixes applied to index, showcat, view, and al
 COM_KUNENA_DESCRIPTIONADD = "Description:"
 COM_KUNENA_EDIT = "Edit"
 COM_KUNENA_EDITOR_INSERT = "Insert"
+COM_KUNENA_EDITOR_IN_MESSAGE="In message"
 COM_KUNENA_EMAIL_DISABLED = "No emails were sent (request was made from localhost)"
 COM_KUNENA_EMAIL_INVALID = "Forum tried to send email from invalid address. Please contact site administrator!"
 COM_KUNENA_ERROR1 = "Section/Category must have a name"
