[K4.0] Missing strings edit template

--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -223,7 +223,6 @@ COM_KUNENA_PROFILE_VIEWS = "Profile views"
 COM_KUNENA_THANK_YOU_RECEIVED = "Thank you received"
 
 ; new Crypsis
-
 COM_KUNENA_GEN_CATEGORY = "Category"
 COM_KUNENA_GEN_MESSAGE = "Message"
 COM_KUNENA_GEN_SUBJECT = "Subject"
@@ -239,6 +238,14 @@ COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
 COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
 COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
