--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -127,7 +127,7 @@ COM_KUNENA_ALLOW_USERNAME_CHANGE="Allow Username Changes"
 COM_KUNENA_ALLOW_USERNAME_CHANGE_DESC="Allow users to change their username from the profile page."
 COM_KUNENA_AVATAR_QUALITY="Avatar Quality"
 COM_KUNENA_A_ASK_EMAIL="Require E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when users or visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
+COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limit Attachments"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limit number of attachments in editor."
 COM_KUNENA_A_AUTOEMBEDEBAY="Auto Embed eBay Items"
