[K4.0] Blue Eagle Settings : it are missing the css parameters (it loads the new Crypsis settings) #3026

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -667,6 +667,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_BASIC="Basic Settings"
 COM_KUNENA_A_TEMPLATE_MANAGER_FEATURES="Features"
 COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
 COM_KUNENA_A_TEMPLATE_MANAGER_COLORS="Colors"
+COM_KUNENA_A_TEMPLATE_MANAGER_AVATARS="Avatars"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
