--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -631,6 +631,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_AUTHOR="Author"
 COM_KUNENA_A_TEMPLATE_MANAGER_PARAMSUNWRITABLE="The File %s Is Unwritable"
 COM_KUNENA_A_TEMPLATE_MANAGER_PARAMSWRITABLE="The File %s Is Writable"
 COM_KUNENA_A_TEMPLATE_MANAGER_CSS_FILE_PERMISSION="Permissions Of CSS Files"
+COM_KUNENA_A_TEMPLATE_MANAGER_LESS_FILE_PERMISSION="Permissions Of LESS Files"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/add.php
 
@@ -672,11 +673,14 @@ COM_KUNENA_A_TEMPLATE_MANAGER_AVATARS="Avatars"
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
 COM_KUNENA_A_TEMPLATE_MANAGER_EDIT_CSS_TEMPLATE="Edit CSS Template"
+COM_KUNENA_A_TEMPLATE_MANAGER_CHOOSE_LESS_TEMPLATE="Edit LESS Template"
 
 ; JROOT/administrator/components/com_kunena/views/templates/view.html.php
 
 COM_KUNENA_A_TEMPLATE_MANAGER_ADD="Add"
 COM_KUNENA_A_TEMPLATE_MANAGER_EDITCSS="Edit CSS"
+COM_KUNENA_A_TEMPLATE_MANAGER_EDITLESS="Edit LESS"
+
 
 ; JROOT/administrator/components/com_kunena/views/tools/
 
