[develop] Crypsis: You can't videos put in the text field (the Add button has no effect) #3059

--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -130,6 +130,7 @@ COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
 COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
 COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Add"
 COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Video Settings"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
