--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -640,6 +640,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_NEW="Install New Kunena Template"
 COM_KUNENA_A_TEMPLATE_MANAGER_PACKAGE_FILE="Package File"
 COM_KUNENA_A_TEMPLATE_MANAGER_UPLOAD="Upload Package File"
 COM_KUNENA_A_TEMPLATE_MANAGER_UPLOAD_FILE="Upload File"
+COM_KUNENA_A_TEMPLATE_MANAGER_EDIT_LESS_TEMPLATE="Edit Less File"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/choosecss.php
 
