--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -354,6 +354,8 @@ COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_LEGACY="Your site is not using <em>System - Moo
 COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_NO_UPGRADE="<em>System - MooTools Upgrade</em> plug-in is not installed into your system."
 COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_WARNING="Many features, including the BBCode editor, may be broken."
 COM_KUNENA_LIB_TEMPLATE_NOTICE_INCOMPATIBLE="Kunena: Incompatible template %s, using %s instead."
+COM_KUNENA_A_TEMPLATE_MANAGER_NO_LESS="This template has no Less files"
+
 
 ; JROOT/administrator/components/com_kunena/libraries/user/ban.php
 
