--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -280,3 +280,6 @@ COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Close"
 COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Ban History"
 COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
 COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+COM_KUNENA_STATUS="Status Text"
+COM_KUNENA_MESSAGE_CREATED="created the topic:"
+COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
