[K4.0] Crypsis: Add info when post as guest

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -283,3 +283,4 @@ COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
 COM_KUNENA_STATUS="Status Text"
 COM_KUNENA_MESSAGE_CREATED="created the topic:"
 COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
