--- a/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Tema buvo sėkmingai atkurta."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Jūs pakeitėte savo balsą!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Balsai atstatyti sėkmingai"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Jūs jau balsavote!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
