--- a/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Emnet er gjenopprettet."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Du har endret din stemme!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Avstemmingen er nullstilt"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Du har avgitt din stemme!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
