--- a/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.templates.ini
@@ -178,19 +178,19 @@ COM_KUNENA_MYPROFILE_REGISTERDATE = "Registreringsdato"
 COM_KUNENA_MYPROFILE_SEND_MESSAGE = "Send en melding"
 COM_KUNENA_MYPROFILE_SIGNATURE = "Signatur"
 COM_KUNENA_MYPROFILE_SIGNATURE_DESC = "Du kan bruke uttrykkikoner og BBCodes i din signatur"
-COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED = "Takk er mottatt"
+COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED = "Mottatte takk"
 COM_KUNENA_MYPROFILE_TIMEZONE = "Tidssone"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME = "Nettstedets navn"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Eksempel: Joomla! i Norge"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL til nettstedet"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Eksempel: www.joomlainorge.no"
 COM_KUNENA_NO_POSTS = "Ingen innlegg"
-COM_KUNENA_OFFLINE = "FRAKOBLET"
-COM_KUNENA_ONLINE = "PÅLOGGET"
 COM_KUNENA_PASS = "Passord:"
 COM_KUNENA_POLLUSERS_MORE = "Se mer"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Legg til et avstemningsvalg"
 COM_KUNENA_POLL_BUTTON_VOTE = "Stem"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Spørreundersøkelse:"
 COM_KUNENA_POLL_NOT_LOGGED = "Bare registrerte brukere kan delta i spørreundersøkelsen"
 COM_KUNENA_POLL_NO_VOTE = "Ingen stemmer"
