--- a/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.tpl_blue_eagle.ini
@@ -19,7 +19,7 @@ COM_KUNENA_VIEW_NO_TOPICS = "Det er ingen emner å vise"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/default.php
 
-COM_KUNENA_FORUM_HEADER = "Kategorihode"
+COM_KUNENA_FORUM_HEADER = "Foruminformasjon"
 COM_KUNENA_GEN_GOTOBOTTOM = "Gå til bunnen"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/list.php
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Veksleknappfarge"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Angi farge for veksleknappen for seksjon."
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Laste Responsiv CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Laster responsiv CSS slik at designmalen tilpasser seg til mobile enheter. Denne funksjonen virke bare når designmalen i Joomla! er responsiv."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Siste innlegg emnelengde"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Angi antall tegn i emne som skal vises i kategorivisningen nyeste innlegg"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
