--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Het onderwerp is succesvol hersteld."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Je hebt je stem gewijzigd!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Stemmen succesvol gereset"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Je hebt gestemd!"
+COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="U heeft te veel link urls in het bericht, verklein het aantal links."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
