--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Voorbeeld: Kunena"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL website"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Voorbeeld: www.kunena.org"
 COM_KUNENA_NO_POSTS = "Geen berichten"
-COM_KUNENA_OFFLINE = "Afwezig"
-COM_KUNENA_ONLINE = "Aanwezig"
 COM_KUNENA_PASS = "Wachtwoord:"
 COM_KUNENA_POLLUSERS_MORE = "Lees verder"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Voeg Poll optie toe"
 COM_KUNENA_POLL_BUTTON_VOTE = "Stem"
+COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="Weergeef de resultaten"
+COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Verberg de resultaten"
 COM_KUNENA_POLL_NAME = "Enquete:"
 COM_KUNENA_POLL_NOT_LOGGED = "U kunt niet aan deze enquete deelnemen omdat u niet bent ingelogd."
 COM_KUNENA_POLL_NO_VOTE = "Geen stemmen"
