--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.tpl_blue_eagle.ini
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Toggler kleur"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Type de kleur van de sectieschakelknop."
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Laad Responsive CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Laad responsive CSS om deze template aan te passen aan mobiele apparaten. Deze optie heeft een responsive Joomla template nodig om goed te werken."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Maximale onderwerp lengte voor laatste bericht"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Stel het aantal tekens in voor het weergeven van de laatste bericht op de index en de categorie pagina. (Onderwerp)"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox kleur"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Selecteer lightbox kleur"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Wit"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Zwart"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Bericht titel lengte"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. bericht title lengte in bericht"
+
 
 ; Removed strings
 
