--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Przykład: Wspaniały Joomla!"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL witryny"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Przykład: www.joomla.pl"
 COM_KUNENA_NO_POSTS = "Nie ma postów"
-COM_KUNENA_OFFLINE = "Offline"
-COM_KUNENA_ONLINE = "Online"
 COM_KUNENA_PASS = "Hasło:"
 COM_KUNENA_POLLUSERS_MORE = "Zobacz więcej"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Dodaj opcję ankiety"
 COM_KUNENA_POLL_BUTTON_VOTE = "Głosuj"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Ankieta:"
 COM_KUNENA_POLL_NOT_LOGGED = "Tylko zarejestrowani użytkownicy mogą wziąć udział w tej ankiecie"
 COM_KUNENA_POLL_NO_VOTE = "Bez głosów"
@@ -254,7 +254,7 @@ COM_KUNENA_SEARCH_START = "Liczba wyników wyszukania"
 COM_KUNENA_SEARCH_UNAME = "Nazwa użytkownika"
 COM_KUNENA_STAT_LATEST_MEMBERS = "Ostatnio zarejestrowany"
 COM_KUNENA_STAT_MORE_ABOUT_STATS = "Pełniejsza statystyka"
-COM_KUNENA_STAT_TODAY_OPEN_THREAD = "Odwiedzin - Dziś"
+COM_KUNENA_STAT_TODAY_OPEN_THREAD = "Nowe tematy - Dziś"
 COM_KUNENA_STAT_TODAY_TOTAL_ANSWER = "Odpowiedzi - Dziś"
 COM_KUNENA_STAT_TOTAL_CATEGORIES = "Kategorii"
 COM_KUNENA_STAT_TOTAL_MESSAGES = "Razem wiadomości"
