--- a/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "O tópico foi restaurado com sucesso"
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Você alterou o seu voto!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Votos redefinidos com sucesso"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Você já votou!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
@@ -100,7 +101,7 @@ COM_KUNENA_KARMA_INCREASED = "O karma do usuário aumentou."
 COM_KUNENA_KARMA_SELF_DECREASE = "Por favor não tente diminuir seu próprio karma!"
 COM_KUNENA_KARMA_SELF_INCREASE = "Seu karma foi diminuido por tentar aumentar o seu próprio!"
 COM_KUNENA_KARMA_WAIT = "Você só pode modificar o karma de uma pessoa a cada 6 horas. <br />Por favor espera até que este período de tempo passe antes de modificar o karma de qualquer pessoa novamente."
-; COM_KUNENA_MODERATE_DELETED_BAD_AVATAR="The offending avatar has been removed successfully."
+COM_KUNENA_MODERATE_DELETED_BAD_AVATAR = "O avatar ofensivo foi removido com sucesso."
 COM_KUNENA_MODERATE_DELETED_BAD_AVATAR_FILESYSTEM = " e foi excluido do sistema de arquivos"
 COM_KUNENA_MODERATE_DELETED_BAD_MESSAGES = "Todas as postagens escritas pelo usuário foram removidas com sucesso"
 COM_KUNENA_MODERATE_DELETED_BAD_PROFILEINFO = "A informação de perfil ofenciva foi removida com sucesso"
@@ -113,8 +114,8 @@ COM_KUNENA_USER_ERROR_KARMA = "Você chegou nesta página por um erro. Por favor
 COM_KUNENA_USER_UNBANNED_DONE = "Banimento de usuário removido com sucesso."
 COM_KUNENA_USER_UNBLOCKED_DONE = "Conta de usuário habilitada com sucesso."
 COM_KUNENA_PROFILE_AVATAR_NOT_SAVED = "O avatar não pode ser enviado!"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS="The user has been successfully reported to stopforumspam.com"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED="Error while reporting the user to stopforumspam.com. Reason given: %s"
+COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS = "O usuário foi reportado com sucesso para stopforumspam.com"
+COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED = "Erro ao reportar o usuário para stopforumspam.com. Motivo: %s"
 
 ; Removed strings
 
