--- a/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle é o template padrão para o 
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Exibir Menu Kunema"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Exibe o menu Kunema ativo dentro do template Kunema. Desabilite este recurso caso queira utilizar o menu principal."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Fundo do Cabeçalho do Fórum"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC = "Defina a cor de fundo do cabeçalho do fórum"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Cor de Aba Sobreposta"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Insira a cor da aba de menu quando o mouse estiver sobre ela."
 COM_KUNENA_TEMPLATE_SKINNER = "Combinar com a Template Joomla"
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Cor do Alternador"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Insira a cor do botão de alternância de sessão."
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Carregar CSS Responsivo"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Carregar CSS responsivo para tornar o template compatível com dispositivos móveis. Este recurso necessita de um template Joomla responsivo para funcionar."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Tamanho do assunto da última publicação"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Defina o número de caracteres para mostrar o último assunto publicado na visão da categoria."
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
