--- a/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Пример: JoomlaRuClub"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL сайта"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Пример: www.joomlaruclub.ru"
 COM_KUNENA_NO_POSTS = "Нет сообщений"
-COM_KUNENA_OFFLINE = "Вне сайта"
-COM_KUNENA_ONLINE = "Сейчас на сайте"
 COM_KUNENA_PASS = "Пароль:"
 COM_KUNENA_POLLUSERS_MORE = "Подробнее"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Добавить вариант опроса"
 COM_KUNENA_POLL_BUTTON_VOTE = "Голосовать"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Опрос:"
 COM_KUNENA_POLL_NOT_LOGGED = "Только зарегистрированные пользователи могут участвовать в этом опросе"
 COM_KUNENA_POLL_NO_VOTE = "Нет голосов"
