--- a/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "CSS-suffix som tillämpas på index, showcat, visa o
 COM_KUNENA_DESCRIPTIONADD = "Beskrivning:"
 COM_KUNENA_EDIT = "Redigera"
 COM_KUNENA_EDITOR_INSERT = "Infoga"
+; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
 COM_KUNENA_EMAIL_DISABLED = "Ingen e-post skickades (begäran gjordes från localhost)"
 COM_KUNENA_EMAIL_INVALID = "Forumet försökte skicka e-post från ogiltig adress. Kontakta administratören!"
 COM_KUNENA_ERROR1 = "Sektion/kategori måste ha ett namn"
@@ -123,7 +124,16 @@ COM_KUNENA_USRL_POSTS = "Inlägg"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Visa kategori '%s'"
 COM_KUNENA_YES = "Ja"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "Filtyper tillåtna för avataruppladdningar är: %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "You aren't allowed to see statistics"
+COM_KUNENA_NEW = "Ny"
+; COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "You have reached the maximum number of files allowed (maximum allowed are %d files)"
+; COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Upload"
+; COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Processing..."
+; COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abort"
+; COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Add Files..."
+; COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "You can drop files here or use the browse button"
+; COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Failed to move avatar file to media directory"
+; COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Rapportera detta"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Rapportera detta inlägg till moderator."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Tack"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Jag vill tacka dig för detta inlägg."
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Återställ"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Återställ detta inlägg."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Markera alla kategorier som lästa."
@@ -202,8 +214,8 @@ COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG = "Avsluta prenumeration på kategor
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_alphauserpoints/alphauserpoints/activity.php
 
-; COM_KUNENA_THANKYOU_GOT_FROM="Received Thank You From"
-; COM_KUNENA_THANKYOU_SAID_TO="Said Thank You To"
+; COM_KUNENA_THANKYOU_GOT_FROM = "Received Thank You From"
+; COM_KUNENA_THANKYOU_SAID_TO = "Said Thank You To"
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_community/community/activity.php
 
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Antal visningar"
 COM_KUNENA_TOGGLER_COLLAPSE = "Fäll ihop"
 COM_KUNENA_TOGGLER_EXPAND = "Veckla ut"
 COM_KUNENA_USRL_SEARCH = "Hitta användare"
+
+COM_KUNENA_ALERT_WARNING_X = "Varning: %s"
+; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
+; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
+; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+; COM_KUNENA_LIB_TIME_NOW = "Just now"
+COM_KUNENA_LIB_TIME_AGO = "%s sedan"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Senaste inloggning"
+COM_KUNENA_VIEW_BLOCKED = "Blockerad"
+; COM_KUNENA_RANK_BLOCKED = "User is blocked"
+
+; COM_KUNENA_TEASER_TEXT = "Please login to view the answers"
+COM_KUNENA_STATISTICS = "Statistik"
+COM_KUNENA_MEMBERS = "Medlemmar"
+
+COM_KUNENA_FILTERACTIVE = "Filter"
+; COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "Clear"
+
+; COM_KUNENA_TOPIC_VOTE_RESULTS = "Results"
+; COM_KUNENA_EDITOR_HR = "Horizontal line"
+; COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE = "Online"
+; COM_KUNENA_AWAY = "Away"
+; COM_KUNENA_BUSY = "Busy"
+; COM_KUNENA_INVISIBLE = "Invisible"
+; COM_KUNENA_OFFLINE = "Offline"
+; COM_KUNENA_UNKNOWN_STATUS = "Unknown Status"
+; COM_KUNENA_STATUS_TOOLONG = "Status Text is too long."
+; COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
+; COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
+; COM_KUNENA_STATUS_TYP = "Type your message below"
+; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Stäng"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Bannlys historia"
+; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
+; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+; COM_KUNENA_STATUS="Status Text"
+; COM_KUNENA_MESSAGE_CREATED="created the topic:"
+; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
