--- a/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Exempel: Kunena"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "Webbsido URL"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Exempel: www.kunena.org"
 COM_KUNENA_NO_POSTS = "Inga inlägg"
-COM_KUNENA_OFFLINE = "OFFLINE"
-COM_KUNENA_ONLINE = "NU ONLINE"
 COM_KUNENA_PASS = "Lösenord:"
 COM_KUNENA_POLLUSERS_MORE = "Se mer"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Lägg till omröstnings alternativ"
 COM_KUNENA_POLL_BUTTON_VOTE = "Rösta"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Omröstning:"
 COM_KUNENA_POLL_NOT_LOGGED = "Endast registrerade användare kan delta i denna omröstning"
 COM_KUNENA_POLL_NO_VOTE = "Inga röster"
