--- a/components/com_kunena/site/language/th-TH/th-TH.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/th-TH/th-TH.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "ตัวอย่างเช่น: 
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL เว็บไซต์"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "ตัวอย่างเช่น: www.Kunena.com"
 COM_KUNENA_NO_POSTS = "ไม่ปรากฏ"
-COM_KUNENA_OFFLINE = "ออฟไลน์"
-COM_KUNENA_ONLINE = "ออนไลน์"
 COM_KUNENA_PASS = "รหัสผ่าน:"
 COM_KUNENA_POLLUSERS_MORE = "ดูเพิ่มเติม"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "เพิ่มตัวเลือกในโพลสำรวจ"
 COM_KUNENA_POLL_BUTTON_VOTE = "โหวต"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "โพลสำรวจ:"
 COM_KUNENA_POLL_NOT_LOGGED = "ในการร่วมโหวต เราให้สิทธิเฉพาะกับสมาชิกเท่านั้น"
 COM_KUNENA_POLL_NO_VOTE = "ยังไม่มีคะแนน"
