--- a/components/com_kunena/site/language/th-TH/th-TH.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/th-TH/th-TH.com_kunena.tpl_blue_eagle.ini
@@ -123,8 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "สีของปุ่มสลับ"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "ระบุสีของปุ่มสลับใช้งาน"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "โหลด Responsive CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "โหลด Responsive CSS เพื่อให้สามารถแสดงในมือถือได้"
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH="Last Post Subject Length"
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC="Set the number of characters to display of the last posted subject in the category view"
+; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Last Post Subject Length"
+; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Set the number of characters to display of the last posted subject in the category view"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
