--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Örnek: Google"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "Web site URL"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Örnek: www.google.com"
 COM_KUNENA_NO_POSTS = "Gönderi Yok"
-COM_KUNENA_OFFLINE = "ÇEVRİMDIŞI"
-COM_KUNENA_ONLINE = "ÇEVRİMİÇİ"
 COM_KUNENA_PASS = "Şifre:"
 COM_KUNENA_POLLUSERS_MORE = "Fazlasını Gör"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Anket Seçeneği Ekle"
 COM_KUNENA_POLL_BUTTON_VOTE = "Oyla"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Anket:"
 COM_KUNENA_POLL_NOT_LOGGED = "Sadece kayıtlı kullanıcılar bu ankete katılabilir"
 COM_KUNENA_POLL_NO_VOTE = "Oy yok"
