--- a/components/com_kunena/site/language/ug-CN/ug-CN.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/ug-CN/ug-CN.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "تېما ئوڭۇشلۇق ئەسلىگە ك
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "سىز بېلەت تاشلاشنى ئۆزگەرتتىڭىز!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "بېلەت تاشلاشنى قايتا قوزغىتىش"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "سىز ئۆزىڭىزگە بېلەت تاشلىدىڭىز!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
