--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Наприклад: Кунена"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL веб-сайту"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Наприклад: www.kunena.org"
 COM_KUNENA_NO_POSTS = "Немає дописів"
-COM_KUNENA_OFFLINE = "АВТОНОМНО"
-COM_KUNENA_ONLINE = "ЗНОВУ ПРИЄДНАНО"
 COM_KUNENA_PASS = "Пароль:"
 COM_KUNENA_POLLUSERS_MORE = "Детальніше"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Додати варіанти опитування"
 COM_KUNENA_POLL_BUTTON_VOTE = "Голос"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Опитування:"
 COM_KUNENA_POLL_NOT_LOGGED = "Лише зареєстровані користувачі можеть приймати участь в опитуванні"
 COM_KUNENA_POLL_NO_VOTE = "Голоси відсутні"
