--- a/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "例如：清风无影"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "网址"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "例如：imvoo.com"
 COM_KUNENA_NO_POSTS = "没有帖子"
-COM_KUNENA_OFFLINE = "离线"
-COM_KUNENA_ONLINE = "当前在线"
 COM_KUNENA_PASS = "密码："
 COM_KUNENA_POLLUSERS_MORE = "更多"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "添加投票选项"
 COM_KUNENA_POLL_BUTTON_VOTE = "投票"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "投票："
 COM_KUNENA_POLL_NOT_LOGGED = "只有登录用户才能参与投票。"
 COM_KUNENA_POLL_NO_VOTE = "没有投票"
