--- a/components/com_kunena/site/language/kz-KZ/kz-KZ.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/kz-KZ/kz-KZ.com_kunena.templates.ini
@@ -175,22 +175,22 @@ COM_KUNENA_MYPROFILE_POSTS = "Хабарлар"
 COM_KUNENA_MYPROFILE_PROFILEVIEW = "Анкета қаралды"
 COM_KUNENA_MYPROFILE_RANK = "Статус"
 COM_KUNENA_MYPROFILE_REGISTERDATE = "Тіркелген уақыты"
-; COM_KUNENA_MYPROFILE_SEND_MESSAGE="Send a message"
+; COM_KUNENA_MYPROFILE_SEND_MESSAGE = "Send a message"
 COM_KUNENA_MYPROFILE_SIGNATURE = "Подпись"
 COM_KUNENA_MYPROFILE_SIGNATURE_DESC = "Қолыңызды жазуда сіз BB-кодтар мен смайлдар қолдана аласыз"
-; COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED="Thank you received:"
+; COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED = "Thank you received:"
 COM_KUNENA_MYPROFILE_TIMEZONE = "Уақыт белдеуі"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME = "Веб сайттың атауы"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Мысалы: joomlaforum.kz"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "Сайт URL"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Мысалы: www.joomlaforum.kz"
 COM_KUNENA_NO_POSTS = "Хабар жоқ"
-COM_KUNENA_OFFLINE = "САЙТТА ЖОҚ"
-COM_KUNENA_ONLINE = "ҚАЗІР САЙТТА"
 COM_KUNENA_PASS = "Құпия сөз:"
 COM_KUNENA_POLLUSERS_MORE = "егжей-тегжейлі"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Сұрақ-жауапқа нұсқалар үстеу"
 COM_KUNENA_POLL_BUTTON_VOTE = "Дауыс беру"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Сұрақ-жауап"
 COM_KUNENA_POLL_NOT_LOGGED = "Бұл сұрақ-жауапқа тек тіркелген қолданушылар қатыса алады"
 COM_KUNENA_POLL_NO_VOTE = "Бірде бір дауыс жоқ"
@@ -343,8 +343,8 @@ COM_KUNENA_VIEW_COMMON_WHO_TITLE = "Форумда кім бар"
 COM_KUNENA_VIEW_COMMON_WHO_TOTAL = "Желідегі барлық қолданушылар: %s"
 COM_KUNENA_VPASS = "Құпия сөзді растау:"
 COM_KUNENA_USER_ATTACHMENT_FILE_WEIGHT = "KB"
-; COM_KUNENA_ATTACHMENT_MANAGER_TOPIC="Topic link"
-; COM_KUNENA_MODERATION_CHANGE_TOPIC_ICON="Change topic icon"
+; COM_KUNENA_ATTACHMENT_MANAGER_TOPIC = "Topic link"
+; COM_KUNENA_MODERATION_CHANGE_TOPIC_ICON = "Change topic icon"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
@@ -507,47 +507,47 @@ COM_KUNENA_MYPROFILE_PERSONALTEXT_DESC = "Өзіңізден бірнеше сө
 
 ; JROOT/components/com_kunena/template/mirage/html/user/edit_tab.php
 
-; COM_KUNENA_EDITOR_HELPLINE_SAVE="Click here to save"
+; COM_KUNENA_EDITOR_HELPLINE_SAVE = "Click here to save"
 
 ; JROOT/components/com_kunena/template/mirage/template.xml
 
-; COM_KUNENA_TEMPLATE_COLORS="Colors"
-; COM_KUNENA_TEMPLATE_CSS3_COLORS="Css3 Options"
-; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR="Body Color text"
-; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Body Color text. like category details"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR="Link Color"
-; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR="Message font color"
-; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC="Message color"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION="General Configuration"
-; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Header color gradient top"
-; COM_KUNENA_TEMPLATE_HEADER_COLOR="Header Color"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Header color gradient bottom"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Create backbround gradient from Header Color to Header Gradient."
-; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_COLOR="Admin color"
-; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC="Legend color for Administrators."
+; COM_KUNENA_TEMPLATE_COLORS = "Colors"
+; COM_KUNENA_TEMPLATE_CSS3_COLORS = "Css3 Options"
+; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR = "Body Color text"
+; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC = "Body Color text. like category details"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW = "Hover Category Odd Row Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC = "Hover Category Odd Row Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN = "Hover Category Odd Even Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC = "Hover Category Odd Even Color"
+; COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR = "Link Color"
+; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR = "Message font color"
+; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC = "Message color"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN = "Backgound Gradient Color top row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2 = "Backgound Gradient Color Bottom row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC = "Backgound Gradient Color Bottom row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC = "Backgound Gradient Color top row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND = "Backgound Gradient Color top row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2 = "Backgound Gradient Color bottom row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC = "Backgound Gradient Color bottom row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC = "Backgound Gradient Color top row odd"
+; COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION = "General Configuration"
+; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND = "Header color gradient top"
+; COM_KUNENA_TEMPLATE_HEADER_COLOR = "Header Color"
+; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND = "Header color gradient bottom"
+; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC = "Create backbround gradient from Header Color to Header Gradient."
+; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_COLOR = "Admin color"
+; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC = "Legend color for Administrators."
 COM_KUNENA_TEMPLATE_LEGEND_COLORS = "Түсінік сөздер (Легенда)"
-; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_COLOR="Global color"
-; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC="Legend color for Global Moderators."
-; COM_KUNENA_TEMPLATE_LEGEND_GUEST_COLOR="Guest color"
-; COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC="Legend color for Guests."
-; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR="Moderator color"
-; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC="Legend color for Moderators."
-; COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR="User color"
-; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC="Legend color for Users."
-; COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC="This is new template for Kunena 2.0."
-; COM_KUNENA_TEMPLATE_TABS="Tabs"
+; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_COLOR = "Global color"
+; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC = "Legend color for Global Moderators."
+; COM_KUNENA_TEMPLATE_LEGEND_GUEST_COLOR = "Guest color"
+; COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC = "Legend color for Guests."
+COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR = "Модератор"
+; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Legend color for Moderators."
+; COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "User color"
+; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Legend color for Users."
+; COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC = "This is new template for Kunena 2.0."
+; COM_KUNENA_TEMPLATE_TABS = "Tabs"
 
 ; Removed strings
 
