--- a/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.ini
+++ b/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "CSS sufiksai taikomi index, showcat, view, ir leidž
 COM_KUNENA_DESCRIPTIONADD = "Aprašymas:"
 COM_KUNENA_EDIT = "Redaguoti"
 COM_KUNENA_EDITOR_INSERT = "Įterpti"
+; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
 COM_KUNENA_EMAIL_DISABLED = "Laiškai nebuvo išsiųsti (prašymas buvo pateiktas iš localhost)"
 COM_KUNENA_EMAIL_INVALID = "Forumas bandė išsiųsti laišką nuo negaliojančio el. pašto adreso. Susisiekite su tinklapio administratoriumi!"
 COM_KUNENA_ERROR1 = "Kategorija / Forumas turi turėti pavadinimą"
@@ -123,7 +124,16 @@ COM_KUNENA_USRL_POSTS = "Žinučių"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Peržiūrėti kategoriją '%s'"
 COM_KUNENA_YES = "Taip"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "Išplėtimai, kurie leidžia įkelti avatarą : %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "Jums nėra leidžiama peržiūrėti statistiką."
+COM_KUNENA_NEW = "Naujas"
+; COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "You have reached the maximum number of files allowed (maximum allowed are %d files)"
+; COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Upload"
+; COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Processing..."
+; COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abort"
+; COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Add Files..."
+; COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "You can drop files here or use the browse button"
+; COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Failed to move avatar file to media directory"
+; COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Pranešti tai"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Pranešti apie šį pranešimą moderatoriams"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Padėkos"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Norėčiau padėkoti Jums už šį pranešimą"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Atkurti"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Atstatyti šį pranešimą"
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Pažymėti visas kategorijas kaip skaitytas"
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Peržiūrų kiekį"
 COM_KUNENA_TOGGLER_COLLAPSE = "Sutraukti"
 COM_KUNENA_TOGGLER_EXPAND = "Išplėsti"
 COM_KUNENA_USRL_SEARCH = "Rasti narį"
+
+COM_KUNENA_ALERT_WARNING_X = "Perspėjimas: %s"
+; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
+; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
+; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+; COM_KUNENA_LIB_TIME_NOW = "Just now"
+COM_KUNENA_LIB_TIME_AGO = "prieš %s"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Paskutinis prisijungimas"
+COM_KUNENA_VIEW_BLOCKED = "Blokuotas"
+; COM_KUNENA_RANK_BLOCKED = "User is blocked"
+
+; COM_KUNENA_TEASER_TEXT = "Please login to view the answers"
+COM_KUNENA_STATISTICS = "Statistika"
+COM_KUNENA_MEMBERS = "narių"
+
+COM_KUNENA_FILTERACTIVE = "Filtras"
+; COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "Clear"
+
+; COM_KUNENA_TOPIC_VOTE_RESULTS = "Results"
+; COM_KUNENA_EDITOR_HR = "Horizontal line"
+; COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE = "Prisijungę"
+; COM_KUNENA_AWAY = "Away"
+; COM_KUNENA_BUSY = "Busy"
+; COM_KUNENA_INVISIBLE = "Invisible"
+; COM_KUNENA_OFFLINE = "Offline"
+; COM_KUNENA_UNKNOWN_STATUS = "Unknown Status"
+; COM_KUNENA_STATUS_TOOLONG = "Status Text is too long."
+; COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
+; COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
+; COM_KUNENA_STATUS_TYP = "Type your message below"
+; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Uždaryti"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Draudimų žurnalas"
+; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
+; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+; COM_KUNENA_STATUS="Status Text"
+; COM_KUNENA_MESSAGE_CREATED="created the topic:"
+; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
