--- a/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/lt-LT/lt-LT.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle yra numatytasis Kunena šablo
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Rodyti Kunena meniu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Rodyti aktyvų Kunena meniu Kunena šablone. Išjunkite, jei norite naudoti pagrindinį meniu."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Forumo antraštės fono spalva"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC = "Nustatyti forumo antraštės fono spalvą"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Užvestos kortelės spalva"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Įveskite užvestos kortelės spalvą."
 COM_KUNENA_TEMPLATE_SKINNER = "Sulieti su Joomla šablonu"
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Perjungėjo spalva"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Įveskite skyriaus perjungėjo mygtuko spalvą."
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Įkelti prisitaikantį CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Įkelti prisitaikantį CSS failą, kad pritaikyti šabloną mobiliems įrenginiams. Kad ši funkcija veiktų korektiškai, reikalingas prisitaikanti Joomla šablonas."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Naujausios patalpintos temos ilgis"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Nustato paskutinės patalpintos temos ženklų skaičių kategorijos rodinyje."
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Balta"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Juoda"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
