--- a/components/com_kunena/site/language/mk-MK/mk-MK.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/mk-MK/mk-MK.com_kunena.controllers.ini
@@ -20,7 +20,7 @@ COM_KUNENA_ANN_SUCCESS_UNPUBLISH = "Објавата %s е успешно трг
 ; JROOT/components/com_kunena/controllers/category.php
 
 COM_KUNENA_GEN_ALL_MARKED = "Сите теми беа одбележани како прочитани"
-; COM_KUNENA_GEN_CATEGORY_NAME_UNSUBCRIBED="You have been unsubscribed from the %s category"
+; COM_KUNENA_GEN_CATEGORY_NAME_UNSUBCRIBED = "You have been unsubscribed from the %s category"
 COM_KUNENA_GEN_CATEGORY_SUBCRIBED = "Се претплативте на категорија, ќе добивате е-маил за секој нов пост."
 COM_KUNENA_GEN_FORUM_MARKED = "Сите теми во категоријата се одбележани како прочитани"
 
@@ -78,29 +78,30 @@ COM_KUNENA_THANKYOU_SUCCESS = "Изразивте благодарност за 
 COM_KUNENA_TOPIC_SUCCESS_DELETE = "Темата е успешно избришана."
 COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Темата е успешно вратена."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Го променивте го Вашиот глас"
-; COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS="Votes reseted successfully"
-; COM_KUNENA_TOPIC_VOTE_SUCCESS="You have given your vote!"
+; COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Votes reseted successfully"
+; COM_KUNENA_TOPIC_VOTE_SUCCESS = "You have given your vote!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
 COM_KUNENA_BULKMSG_DELETED = "Posts were deleted successfully"
-; COM_KUNENA_CONTROLLER_NO_TASK="No task selected"
-; COM_KUNENA_NO_MESSAGES_SELECTED="No messages selected"
-; COM_KUNENA_NO_TOPICS_SELECTED="No topics selected"
+; COM_KUNENA_CONTROLLER_NO_TASK = "No task selected"
+; COM_KUNENA_NO_MESSAGES_SELECTED = "No messages selected"
+; COM_KUNENA_NO_TOPICS_SELECTED = "No topics selected"
 COM_KUNENA_USER_UNFAVORITE_YES = "You have unfavorited the topic."
 COM_KUNENA_USER_UNSUBSCRIBE_YES = "You have been unsubscribed from the topic."
 
 ; JROOT/components/com_kunena/controllers/user.php
 
-; COM_KUNENA_ATTACHMENTS_DELETE_FAILED="Delete attachments has failed"
-; COM_KUNENA_ATTACHMENTS_DELETE_SUCCESSFULLY="%s attachments have been deleted successfully"
-; COM_KUNENA_ATTACHMENTS_NO_ATTACHMENTS_SELECTED="You have forgot to select attachments"
+; COM_KUNENA_ATTACHMENTS_DELETE_FAILED = "Delete attachments has failed"
+; COM_KUNENA_ATTACHMENTS_DELETE_SUCCESSFULLY = "%s attachments have been deleted successfully"
+; COM_KUNENA_ATTACHMENTS_NO_ATTACHMENTS_SELECTED = "You have forgot to select attachments"
 COM_KUNENA_KARMA_DECREASED = "Кармата на корисникот е намалена. Доколку не се вратите на топикот за неколку моменти,"
 COM_KUNENA_KARMA_INCREASED = "Кармата на корисникот е зголемена. Доколку не се вратите на топикот за неколку моменти,"
 COM_KUNENA_KARMA_SELF_DECREASE = "Не се обидувајте самите да си ја намалите кармата!"
 COM_KUNENA_KARMA_SELF_INCREASE = "Вашата карма беше намалена бидејќи пробавте самите да си ја зголемите!"
 COM_KUNENA_KARMA_WAIT = "На секој член можеш да му ја промениш кармата само еднаш на 6 часа. <br />Откако ќе измине периодот од 6 часа обиди се повторно."
-; COM_KUNENA_MODERATE_DELETED_BAD_AVATAR="The offending avatar has been removed successfully."
+; COM_KUNENA_MODERATE_DELETED_BAD_AVATAR = "The offending avatar has been removed successfully."
 COM_KUNENA_MODERATE_DELETED_BAD_AVATAR_FILESYSTEM = "и беше избришана од системот."
 COM_KUNENA_MODERATE_DELETED_BAD_MESSAGES = "Сите содржини од корисникот беа успешно избришани."
 COM_KUNENA_MODERATE_DELETED_BAD_PROFILEINFO = "Навредливите информации беа успешно отстранети."
@@ -112,9 +113,9 @@ COM_KUNENA_PROFILE_SAVED = "Профилот е зачуван."
 COM_KUNENA_USER_ERROR_KARMA = "You came to this page in error. Please inform the administrator which links are the cause of error."
 COM_KUNENA_USER_UNBANNED_DONE = "User ban removed successfully"
 COM_KUNENA_USER_UNBLOCKED_DONE = "User account enabled successfully"
-; COM_KUNENA_PROFILE_AVATAR_NOT_SAVED="Avatar couldn't be saved!"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS="The user has been successfully reported to stopforumspam.com"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED="Error while reporting the user to stopforumspam.com. Reason given: %s"
+; COM_KUNENA_PROFILE_AVATAR_NOT_SAVED = "Avatar couldn't be saved!"
+; COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS = "The user has been successfully reported to stopforumspam.com"
+; COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED = "Error while reporting the user to stopforumspam.com. Reason given: %s"
 
 ; Removed strings
 
