--- a/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.ini
+++ b/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "CSS suffiks lagt til indeks, vis kategori, viser og 
 COM_KUNENA_DESCRIPTIONADD = "Beskrivelse:"
 COM_KUNENA_EDIT = "Endre"
 COM_KUNENA_EDITOR_INSERT = "Sett inn"
+; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
 COM_KUNENA_EMAIL_DISABLED = "Ingen e-poster ble sent (forespørsel ble gjort fra localhost)"
 COM_KUNENA_EMAIL_INVALID = "Forumet forsøkte å sende e-post fra en ugyldig adresse. Vennligst kontakt sidens administrator!"
 COM_KUNENA_ERROR1 = "Kategori / Forum må ha et navn"
@@ -59,7 +60,7 @@ COM_KUNENA_GEN_EMAIL = "E-post"
 COM_KUNENA_GEN_REMOVE_FILE = "Fjern fil"
 COM_KUNENA_GEN_SUBJECT = "Emne"
 COM_KUNENA_GO = "Utfør"
-COM_KUNENA_HEADERADD = "Forumtittel:"
+COM_KUNENA_HEADERADD = "Informasjon:"
 COM_KUNENA_LIB_HTML_DISPLAY_NUM = "Vis nr."
 COM_KUNENA_LOCKED = "Låst"
 COM_KUNENA_LOCKED1 = "Låst:"
@@ -79,14 +80,14 @@ COM_KUNENA_NOMODS = "Det er ingen moderator knyttet til dette forumet"
 COM_KUNENA_NO_ACCESS = "Du har ikke adgang til dette forumet!"
 COM_KUNENA_PAGE = "Side:"
 COM_KUNENA_PARENT = "Overordnet:"
-COM_KUNENA_PARENTDESC = "Merk! For å lage en kategori, velg \'Toppnivå kategori\' som en overordnet. En kategori fungerer som en beholder for forumene.<br />Et forum kan  <strong>bare</strong> opprettes innenfor en kategori, ved å velge en tidligere opprettet kategori som overordnet til forumet.<br /> Meldinger kan  <strong>IKKE</strong> legges inn i en kategori; kun i forum."
+COM_KUNENA_PARENTDESC = "Merk! For å lage en kategori, velg \\'Toppnivå kategori\\' som en overordnet. En kategori fungerer som en beholder for forumene.<br />Et forum kan  <strong>bare</strong> opprettes innenfor en kategori, ved å velge en tidligere opprettet kategori som overordnet til forumet.<br /> Meldinger kan  <strong>IKKE</strong> legges inn i en kategori; kun i forum."
 COM_KUNENA_PERMISSIONS = "Rettigheter"
 COM_KUNENA_PMS_INBOX = "Private meldinger"
 COM_KUNENA_PUBLISHED = "Publisert"
 COM_KUNENA_REORDER = "Sortering"
 COM_KUNENA_RESET = "Tilbakestill"
 COM_KUNENA_REV = "Vurder innlegg:"
-COM_KUNENA_REVDESC = "Sett til &quot;Ja&quot; hvis du ønsker at innlegg skal vurderes av moderatorer før de publiseres. Dette har kun betydning i et moderert forum!<br />Hvis du velger dette uten at noen moderatorer er valgt vil administratoren(e) for nettstedet ha eneansvar for godkjenning/sletting av innlagte innlegg, siden disse vil bli satt \'på vent\'!"
+COM_KUNENA_REVDESC = "Sett til &quot;Ja&quot; hvis du ønsker at innlegg skal vurderes av moderatorer før de publiseres. Dette har kun betydning i et moderert forum!<br />Hvis du velger dette uten at noen moderatorer er valgt vil administratoren(e) for nettstedet ha eneansvar for godkjenning/sletting av innlagte innlegg, siden disse vil bli satt \\'på vent\\'!"
 COM_KUNENA_REVIEW = "Gjennomgå"
 COM_KUNENA_SECTION = "Seksjon"
 COM_KUNENA_SHOW_12_HOURS = "12 timer"
@@ -124,6 +125,15 @@ COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Vis kategori '%s'"
 COM_KUNENA_YES = "Ja"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "Utvidelser som tillater opplasting av profilbilder er: %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "Du har ikke tillatelse til å se statistikk"
+COM_KUNENA_NEW = "Ny"
+; COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "You have reached the maximum number of files allowed (maximum allowed are %d files)"
+; COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Upload"
+; COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Processing..."
+; COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abort"
+; COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Add Files..."
+; COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "You can drop files here or use the browse button"
+; COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Failed to move avatar file to media directory"
+; COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Rapporter dette"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Rapporter denne meldingen til moderatorene."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Takk for svar"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Jeg vil takke deg for denne meldingen."
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Gjenopprett"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Gjenopprette denne meldingen."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Marker alle kategorier for lest"
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Antall visninger"
 COM_KUNENA_TOGGLER_COLLAPSE = "Fold sammen"
 COM_KUNENA_TOGGLER_EXPAND = "Fold ut"
 COM_KUNENA_USRL_SEARCH = "Finn bruker"
+
+COM_KUNENA_ALERT_WARNING_X = "Advarsel: %s"
+; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
+; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
+; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+; COM_KUNENA_LIB_TIME_NOW = "Just now"
+COM_KUNENA_LIB_TIME_AGO = "%s dager siden"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Sist innlogget"
+COM_KUNENA_VIEW_BLOCKED = "Blokkert"
+; COM_KUNENA_RANK_BLOCKED = "User is blocked"
+
+; COM_KUNENA_TEASER_TEXT = "Please login to view the answers"
+COM_KUNENA_STATISTICS = "Statistikker"
+COM_KUNENA_MEMBERS = "registrert(e) bruker(e)"
+
+COM_KUNENA_FILTERACTIVE = "Filter"
+; COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "Clear"
+
+; COM_KUNENA_TOPIC_VOTE_RESULTS = "Results"
+; COM_KUNENA_EDITOR_HR = "Horizontal line"
+; COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE = "Pålogget"
+; COM_KUNENA_AWAY = "Away"
+; COM_KUNENA_BUSY = "Busy"
+; COM_KUNENA_INVISIBLE = "Invisible"
+; COM_KUNENA_OFFLINE = "Offline"
+; COM_KUNENA_UNKNOWN_STATUS = "Unknown Status"
+; COM_KUNENA_STATUS_TOOLONG = "Status Text is too long."
+; COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
+; COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
+; COM_KUNENA_STATUS_TYP = "Type your message below"
+; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Lukk"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Utestengelshistorie"
+; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
+; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+; COM_KUNENA_STATUS="Status Text"
+; COM_KUNENA_MESSAGE_CREATED="created the topic:"
+; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
