--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "CSS-achtervoegsel wordt gebruikt bij index, showcat,
 COM_KUNENA_DESCRIPTIONADD = "Beschrijving:"
 COM_KUNENA_EDIT = "Bewerken"
 COM_KUNENA_EDITOR_INSERT = "Voeg in"
+COM_KUNENA_EDITOR_IN_MESSAGE="In bericht"
 COM_KUNENA_EMAIL_DISABLED = "Geen e-mails verstuurd (verzoek werd gemaakt vanaf de localhost)"
 COM_KUNENA_EMAIL_INVALID = "Forum probeerde een e-mail te verzenden vanaf een ongeldig e-mailadres. Neem contact op met de websitebeheerder!"
 COM_KUNENA_ERROR1 = "Categorie / forum moet een naam hebben"
@@ -86,7 +87,7 @@ COM_KUNENA_PUBLISHED = "Geplaatst"
 COM_KUNENA_REORDER = "Herordenen"
 COM_KUNENA_RESET = "Opnieuw"
 COM_KUNENA_REV = "Beoordeel berichten:"
-COM_KUNENA_REVDESC = "Stel in op <em>Ja</em> als de berichten eerst beoordeeld moeten worden door moderatoren voor publicatie in dit forum. Dit is alleen nuttig op een gemodereerd forum!<br />Indien u dit instelt zonder moderatoren te specificeren zal de administrator alleen verantwoordelijk zijn voor het goedkeuren/verwijderen van de toegevoegde berichten wanneer zich deze in de \'wacht\' bevinden!"
+COM_KUNENA_REVDESC = "Stel in op <em>Ja</em> als de berichten eerst beoordeeld moeten worden door moderatoren voor publicatie in dit forum. Dit is alleen nuttig op een gemodereerd forum!<br />Indien u dit instelt zonder moderatoren te specificeren zal de administrator alleen verantwoordelijk zijn voor het goedkeuren/verwijderen van de toegevoegde berichten wanneer zich deze in de \\'wacht\\' bevinden!"
 COM_KUNENA_REVIEW = "Beoordeel"
 COM_KUNENA_SECTION = "Sectie"
 COM_KUNENA_SHOW_12_HOURS = "12 uur"
@@ -124,6 +125,15 @@ COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Bekijk categorie '%s'"
 COM_KUNENA_YES = "Ja"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "De extenties die een avatar kunnen uploaden zijn: %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "U heeft geen toegang tot de gebruikerslijst"
+COM_KUNENA_NEW = "Nieuw"
+COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "U heeft het maximaal aantal toegestane bestanden bereikt (maximaal toegestaan is %d bestanden)"
+COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "uploaden"
+COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Verwerken..."
+COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Afbreken"
+COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Toevoegen bestanden..."
+COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Je kunt hier bestanden neerzetten of gebruik de knop Bladeren"
+COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Avatar-bestand naar de media map verplaatsen is mislukt"
+COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar bestandsgrootte overschrijden limiet toegestaan in de configuratie"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Rapporteer dit"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Rapporteer dit bericht aan de moderators"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Dank u"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Ik wil je bedanken voor dit bericht."
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Verwijder dankjewel"
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "Ik wil mijn dankjewel voor dit bericht verwijderen"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Herstel"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Herstel dit bericht."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Markeer alle categorieën als gelezen"
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Aantal malen bekeken"
 COM_KUNENA_TOGGLER_COLLAPSE = "Verklein"
 COM_KUNENA_TOGGLER_EXPAND = "Vergroot"
 COM_KUNENA_USRL_SEARCH = "Zoek gebruiker"
+
+COM_KUNENA_ALERT_WARNING_X = "Waarschuwing: %s"
+COM_KUNENA_ALERT_ERROR_X = "Fout: %s"
+COM_KUNENA_ALERT_SUCCESS_X = "Succes: %s"
+COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+COM_KUNENA_LIB_TIME_NOW = "Zojuist"
+COM_KUNENA_LIB_TIME_AGO = "%s geleden"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Laatst ingelogd"
+COM_KUNENA_VIEW_BLOCKED = "Geblokkeerd"
+COM_KUNENA_RANK_BLOCKED = "Gebruiker is geblokkeerd"
+
+COM_KUNENA_TEASER_TEXT = "Log aub in om antwoorden te kunnen zien"
+COM_KUNENA_STATISTICS = "Statistieken"
+COM_KUNENA_MEMBERS = "leden"
+
+COM_KUNENA_FILTERACTIVE = "Filter"
+COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "opschonen"
+
+COM_KUNENA_TOPIC_VOTE_RESULTS = "Resultaten"
+COM_KUNENA_EDITOR_HR = "Horizontale lijn"
+COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontale lijn: [hr]"
+
+COM_KUNENA_ONLINE = "aanwezig"
+COM_KUNENA_AWAY = "Afwezig"
+COM_KUNENA_BUSY = "Druk"
+COM_KUNENA_INVISIBLE = "Onzichtbaar"
+COM_KUNENA_OFFLINE = "Offline"
+COM_KUNENA_UNKNOWN_STATUS = "Onbekende status"
+COM_KUNENA_STATUS_TOOLONG = "Status tekst is te lang."
+COM_KUNENA_STATUS_SAVED = "Status tekst met succes opgeslagen"
+COM_KUNENA_STATUS_MESSAGE = "Stel Status bericht in"
+COM_KUNENA_STATUS_TYP = "Type je bericht hieronder"
+COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+COM_KUNENA_GO_TO_EDITOR="Ga naar de editor..."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Sluit"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Schorsingsgeschiedenis"
+COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Verplaats opties"
+COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basis informatie"
+COM_KUNENA_STATUS="Status tekst"
+COM_KUNENA_MESSAGE_CREATED="Onderwerp aangemaakt:"
+COM_KUNENA_MESSAGE_REPLIED="Onderwerp beantwoord:"
+COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Je bericht wordt geplaatst als 'Gast'"
+COM_KUNENA_META_PROFILE="%s is op %s. Om te verbinden met %s, treed vandaag toe tot %s."
