--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Kolor przełacznika"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Podaj kolor przycisku przełącznika sekcji"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Załaduj responsywny CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Wgraj responsywny CSS by przystosować szablon do wykorzystania w urządzeniach mobilnych. Do poprawnej pracy wymagany jest responsywny szablon Joomli."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Długość tematu w widoku kategorii"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Ustaw liczbę znaków do wyświetlania z ostatniego tematu w widoku kategorii"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
