--- a/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.ini
+++ b/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.ini
@@ -48,14 +48,15 @@ COM_KUNENA_CLASS_SFXDESC = "Sufixos CSS aplicados ao index, showcat, pré visual
 COM_KUNENA_DESCRIPTIONADD = "Descrição:"
 COM_KUNENA_EDIT = "Editar"
 COM_KUNENA_EDITOR_INSERT = "Inserir"
-COM_KUNENA_EMAIL_DISABLED = "Não foram enviados e-mails (o pedido foi efetuado no localhost)"
+; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
+COM_KUNENA_EMAIL_DISABLED = "Não foram enviados emails (o pedido foi efetuado no localhost)"
 COM_KUNENA_EMAIL_INVALID = "O Fórum tentou enviar um e-mail de um endereço errado. Por favor contactar o administrador!"
 COM_KUNENA_ERROR1 = "Secção/Categoria tem de ter um nome"
 COM_KUNENA_ERROR_TOKEN = "Submeteu informação num formulário obsoleto. Por favor faça atualização à página e tente novamente!"
 COM_KUNENA_FILENAME = "Nome do Ficheiro:"
 COM_KUNENA_FILESIZE = "Tamanho do Ficheiro:"
 COM_KUNENA_FILTER = "Filtro"
-COM_KUNENA_GEN_EMAIL = "E-mail"
+COM_KUNENA_GEN_EMAIL = "Email"
 COM_KUNENA_GEN_REMOVE_FILE = "Remover Ficheiro"
 COM_KUNENA_GEN_SUBJECT = "Assunto"
 COM_KUNENA_GO = "Ir"
@@ -124,6 +125,15 @@ COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Ver categoria '%s'"
 COM_KUNENA_YES = "Sim"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "As extensões permitidas para carregamento do avatar são: %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "Não tem permissão para ver as estatísticas"
+COM_KUNENA_NEW = "Novo"
+; COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "You have reached the maximum number of files allowed (maximum allowed are %d files)"
+; COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Upload"
+; COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Processing..."
+; COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abort"
+; COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Add Files..."
+; COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "You can drop files here or use the browse button"
+; COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Failed to move avatar file to media directory"
+; COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Reportar"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Reportar esta mensagem aos moderadores."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Agradecer"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Quero agradecer-lhe por esta mensagem."
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Restaurar"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Restaurar a mensagem."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Marcar todas as categorias como lidas"
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Número de acessos"
 COM_KUNENA_TOGGLER_COLLAPSE = "Colapsar"
 COM_KUNENA_TOGGLER_EXPAND = "Expandir"
 COM_KUNENA_USRL_SEARCH = "Pesquisar utilizador"
+
+COM_KUNENA_ALERT_WARNING_X = "Aviso: %s"
+; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
+; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
+; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+; COM_KUNENA_LIB_TIME_NOW = "Just now"
+COM_KUNENA_LIB_TIME_AGO = "%s atrás"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Último acesso"
+COM_KUNENA_VIEW_BLOCKED = "Bloqueado"
+; COM_KUNENA_RANK_BLOCKED = "User is blocked"
+
+; COM_KUNENA_TEASER_TEXT = "Please login to view the answers"
+COM_KUNENA_STATISTICS = "Estatísticas"
+COM_KUNENA_MEMBERS = "Membros"
+
+COM_KUNENA_FILTERACTIVE = "Filtro"
+; COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "Clear"
+
+; COM_KUNENA_TOPIC_VOTE_RESULTS = "Results"
+; COM_KUNENA_EDITOR_HR = "Horizontal line"
+; COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE = "Em linha"
+; COM_KUNENA_AWAY = "Away"
+; COM_KUNENA_BUSY = "Busy"
+; COM_KUNENA_INVISIBLE = "Invisible"
+; COM_KUNENA_OFFLINE = "Offline"
+; COM_KUNENA_UNKNOWN_STATUS = "Unknown Status"
+; COM_KUNENA_STATUS_TOOLONG = "Status Text is too long."
+; COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
+; COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
+; COM_KUNENA_STATUS_TYP = "Type your message below"
+; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Fechar"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Histórico de Proibições"
+; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
+; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+; COM_KUNENA_STATUS="Status Text"
+; COM_KUNENA_MESSAGE_CREATED="created the topic:"
+; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
