--- a/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.models.ini
+++ b/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Aprovar selecionados"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- Escolher Ação -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Eliminar permanentemente os selecionados"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Restaurar selecionados"
-COM_KUNENA_DELETE_SELECTED = "Eliminar selecionados"
-COM_KUNENA_MOVE_SELECTED = "Mover selecionados"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Cancelar Subscrição"
+COM_KUNENA_APPROVE_SELECTED="Aprovar selecionados"
+COM_KUNENA_BULK_CHOOSE_ACTION="- Escolher Ação -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Eliminar permanentemente os selecionados"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Restaurar selecionados"
+COM_KUNENA_DELETE_SELECTED="Eliminar selecionados"
+COM_KUNENA_MOVE_SELECTED="Mover selecionados"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Cancelar Subscrição"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Publicar"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Não publicar"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Eliminar"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Publicar"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Não publicar"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Eliminar"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Pesquisar Fórum"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Nenhuma mensagem contendo todos os termos da sua pesquisa foi encontrada."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Pelo menos uma palavra-chave deve tem mais de três carateres."
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "A sua pesquisa %s não coincidiu com nenhum tópico."
+COM_KUNENA_GEN_SEARCH_BOX="Pesquisar Fórum"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Nenhuma mensagem contendo todos os termos da sua pesquisa foi encontrada."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Pelo menos uma palavra-chave deve tem mais de três carateres."
+COM_KUNENA_SEARCH_NORESULTS_FOUND="A sua pesquisa %s não coincidiu com nenhum tópico."
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Retirar de Favorito"
+COM_KUNENA_UNFAVORITE_SELECTED="Retirar de Favorito"
