--- a/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.tpl_blue_eagle.ini
@@ -110,7 +110,7 @@ COM_KUNENA_USRL_REGISTERED_USERS = "%s temos <strong>%d</strong> utilizadores re
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle é o tema padrão para Kunena."
+COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle é o modelo padrão para Kunena."
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Exibir Menu Kunena"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Exibir o menu Kunena ativo dentro do modelo Kunena. Desativar esse recurso se pretender usar o seu menu principal em vez do Menu Kunena"
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Fundo do Cabeçalho do Fórum"
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Cor para alternar"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Digite a cor do botão de alternar secção"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Carregar responsive CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Carregar responsive CSS para tornar o modelo compatível com dispositivos móveis. Esse recurso precisa de um modelo ágil para funcionar corretamente."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Comprimento do assunto da última mensagem"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Defina o número de carateres para exibição do último assunto postado na visualização da categoria"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
