--- a/components/com_kunena/site/language/ro-RO/ro-RO.com_kunena.models.ini
+++ b/components/com_kunena/site/language/ro-RO/ro-RO.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Aprob&#259; selec&#539;ia"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- Alege Actiunea -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "&#536;terge permanent selec&#539;ia"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Restaureaz&#259; selec&#539;ia"
-COM_KUNENA_DELETE_SELECTED = "&#536;terge selec&#539;ia"
-COM_KUNENA_MOVE_SELECTED = "Mut&#259; selec&#539;ia"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Dezabonare selec&#539;ie"
+COM_KUNENA_APPROVE_SELECTED="Aprobați selecția"
+COM_KUNENA_BULK_CHOOSE_ACTION="- Alege Acțiunea -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Șterge permanent selecția"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Restaurează selecția"
+COM_KUNENA_DELETE_SELECTED="Șterge selecția"
+COM_KUNENA_MOVE_SELECTED="Mutați selecția"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Dezabonare selecție"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Public&#259;"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "De-publică"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "&#536;terge"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Publică"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="De-publică"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Șterge"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Caut&#259; &#238;n forum"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Nici un mesaj con&#539;in&#226;nd to&#539;i termenii c&#259;ut&#259;rii nu a fost g&#259;sit"
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Cel pu&#539;in un cuv&#226;nt cheie trebuie s&#259; aibe peste trei caractere"
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "Căutarea %s nu are nici un rezultat in discutii "
+COM_KUNENA_GEN_SEARCH_BOX="Căutare forum"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Nici un mesaj conținând toți termenii căutării nu a fost găsit"
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Cel puțin un cuvânt cheie trebuie să aibe peste trei caractere"
+COM_KUNENA_SEARCH_NORESULTS_FOUND="Căutarea %s nu are nici un rezultat în discuții "
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Defavorizare selec&#539;ie"
+COM_KUNENA_UNFAVORITE_SELECTED="Defavorizare selecție"
