--- a/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.models.ini
+++ b/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Одобрить выбранное"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- Выберите действие -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Полностью удалить выбранное"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Восстановить выбранное"
-COM_KUNENA_DELETE_SELECTED = "Удалить выбранное"
-COM_KUNENA_MOVE_SELECTED = "Переместить выбранное"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Отписаться от выбранного"
+COM_KUNENA_APPROVE_SELECTED="Одобрить выбранное"
+COM_KUNENA_BULK_CHOOSE_ACTION="- Выберите действие -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Полностью удалить выбранное"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Восстановить выбранное"
+COM_KUNENA_DELETE_SELECTED="Удалить выбранное"
+COM_KUNENA_MOVE_SELECTED="Переместить выбранное"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Отписаться от выбранного"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Опубликовать"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Снять с публикации"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Удалить"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Опубликовать"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Снять с публикации"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Удалить"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Поиск по форуму"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Не найдено сообщений, содержащих ваши условия поиска."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "По крайней мере одно ключевое слово должно быть более 3-х символов."
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "Ваш поиск %s не совпадает ни с одной темой."
+COM_KUNENA_GEN_SEARCH_BOX="Поиск по форуму"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Не найдено сообщений, содержащих ваши условия поиска."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="По крайней мере одно ключевое слово должно быть более 3-х символов."
+COM_KUNENA_SEARCH_NORESULTS_FOUND="Ваш поиск %s не совпадает ни с одной темой."
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Удалить из избранного выбранное"
+COM_KUNENA_UNFAVORITE_SELECTED="Удалить из избранного выбранное"
