--- a/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/ru-RU/ru-RU.com_kunena.tpl_blue_eagle.ini
@@ -123,6 +123,15 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Цвет переключения"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Введите цвет кнопки переключения раздела."
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Загружать Responsive CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Загружать ли легко реагирующий CSS, для совместимости шаблона с мобильными устройствами. Эта функция должна адаптировать шаблон для правильной работы."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Длина темы последнего сообщения"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Установите количество знаков для отображения темы последнего сообщения в окне просмотра категорий"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
