--- a/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Téma úspešne obnovená."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Zmenili ste svoje hlasovanie!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Hlasy úspešne vynulované"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Hlasovali ste!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
@@ -100,7 +101,7 @@ COM_KUNENA_KARMA_INCREASED = "Karma uživatela bola zvýšená."
 COM_KUNENA_KARMA_SELF_DECREASE = "Prosím, nepokúšajte sa zvýšiť svoju vlastnú karmu!"
 COM_KUNENA_KARMA_SELF_INCREASE = "Vaše karma bola znížena, ako trest za pokus o zvýšenie vlastnej karmy!"
 COM_KUNENA_KARMA_WAIT = "Karmu jednej osoby môžete upraviť iba raz za 6 hodín. <br/>Pred opakovanou úpravou karmy je potrebné počkat, až tento časový limit ubehne."
-; COM_KUNENA_MODERATE_DELETED_BAD_AVATAR="The offending avatar has been removed successfully."
+COM_KUNENA_MODERATE_DELETED_BAD_AVATAR = "Nevhodný avatar bol úspešne odstránený."
 COM_KUNENA_MODERATE_DELETED_BAD_AVATAR_FILESYSTEM = "a bol zmazaný zo súborového systému."
 COM_KUNENA_MODERATE_DELETED_BAD_MESSAGES = "Všetky príspevky napísané uživatelom boli úspešne zmazané"
 COM_KUNENA_MODERATE_DELETED_BAD_PROFILEINFO = "Nevhodné profilové údaje boli úspešne odstránené."
@@ -113,8 +114,8 @@ COM_KUNENA_USER_ERROR_KARMA = "Ste na tejto stránke v dôsledku chyby? Informuj
 COM_KUNENA_USER_UNBANNED_DONE = "Trest bol uživatelovi zrušený."
 COM_KUNENA_USER_UNBLOCKED_DONE = "Uživatelský účet bol úspešne povolený"
 COM_KUNENA_PROFILE_AVATAR_NOT_SAVED = "Avatar nemohol byť uložený!"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS="The user has been successfully reported to stopforumspam.com"
-; COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED="Error while reporting the user to stopforumspam.com. Reason given: %s"
+COM_KUNENA_STOPFORUMSPAM_REPORT_SUCCESS = "Užívateľ bol úspešne nahlásený na stopforumspam.com"
+COM_KUNENA_STOPFORUMSPAM_REPORT_FAILED = "Z nasledujúceho dôvodu nastala chyba počas nahlasovania užívateľa na stopforumspam.com: %s"
 
 ; Removed strings
 
