--- a/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Príklad: Kunena"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "URL webovej stránky"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Príklad: www.kunena.com"
 COM_KUNENA_NO_POSTS = "Bez príspevkov."
-COM_KUNENA_OFFLINE = "NEPRÍTOMNÝ"
-COM_KUNENA_ONLINE = "PRÍTOMNÝ"
 COM_KUNENA_PASS = "Heslo:"
 COM_KUNENA_POLLUSERS_MORE = "Vidieť viac"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Pridať možnosť ankety"
 COM_KUNENA_POLL_BUTTON_VOTE = "Zvoliť"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Anketa:"
 COM_KUNENA_POLL_NOT_LOGGED = "Ankety sa môžu zúčastniť iba registrovaní užívatelia."
 COM_KUNENA_POLL_NO_VOTE = "Nehlasované"
