--- a/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.tpl_blue_eagle.ini
@@ -110,21 +110,28 @@ COM_KUNENA_USRL_REGISTERED_USERS = "%s má <strong>%d</strong> registrovaných u
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is the default template for Kunena."
+COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle je východzia šablóna pre Kunena fórum."
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Zobraziť Kunena Menu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Zobraziť aktívne Kunena menu v Kunena šablóne. Vypnite túto funkciu ak chcete namiesto toho používať vaše hlavné menu."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Pozadie hlavičky fóra"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC = "Definujte pozadie záhlavia fóra."
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Farba záložky pod kurzorom"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Vložiť farbu záložky menu pod kurzorom"
 COM_KUNENA_TEMPLATE_SKINNER = "Zlúčiť s šablónou aplikácie Joomla"
 COM_KUNENA_TEMPLATE_SKINNER_DESC = "Automatické zlúčenie základnej témy s šablónou aplikácie Joomla"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Prepínač farby"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Vložiť farbu tlačidla prepínača sekcie"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Load Responsive CSS"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH="Last Post Subject Length"
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC="Set the number of characters to display of the last posted subject in the category view"
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Načítať responzívne CSS"
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Načíta responzívne CSS pre prispôsobenie sa fóra pre mobilné zariadenia. Pre korektné zobrazenie sa vyžaduje použitie responzívnej Joomla šablóny."
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Dĺžka predmetu posledného príspevku"
+COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Nastaví počet znakov pre zobrazenie predmetu posledného príspevku v zobrazení kategórie"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
