--- a/components/com_kunena/site/language/sr-RS/sr-RS.com_kunena.models.ini
+++ b/components/com_kunena/site/language/sr-RS/sr-RS.com_kunena.models.ini
@@ -11,7 +11,7 @@
 
 ; JROOT/components/com_kunena/models/
 
-; COM_KUNENA_APPROVE_SELECTED="Approve selected"
+COM_KUNENA_APPROVE_SELECTED = "Одобри изабрано"
 COM_KUNENA_BULK_CHOOSE_ACTION = "- Одаберите Радњу -"
 COM_KUNENA_BUTTON_PERMDELETE_LONG = "Обриши поруку трајно"
 COM_KUNENA_BUTTON_UNDELETE_LONG = "Врати грешком обрисану поруку"
@@ -22,7 +22,7 @@ COM_KUNENA_UNSUBSCRIBE_SELECTED = "Уклони одабране из претп
 ; JROOT/components/com_kunena/models/announcement.php
 
 COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Објави"
-; COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Unpublish"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Одјави"
 COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Обриши"
 
 ; JROOT/components/com_kunena/models/search.php
@@ -30,7 +30,7 @@ COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Обриши"
 COM_KUNENA_GEN_SEARCH_BOX = "Претражи форум"
 COM_KUNENA_SEARCH_ERR_NOPOSTS = "Нису пронађене поруке које садрже све ваше услове претраге."
 COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Барем једна кључна реч треба да буде дужа од 3 знака!"
-; COM_KUNENA_SEARCH_NORESULTS_FOUND="Your search %s did not match any topics."
+COM_KUNENA_SEARCH_NORESULTS_FOUND = "Ваша претрага  %s се не слаже ни са једном темом "
 
 ; JROOT/components/com_kunena/models/topics.php
 
