--- a/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Ämnet har nu återställts"
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Du har nu ändrat din röst!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Rösterna är nu nollställda"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Du har redan röstat"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
