--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Konu başarıyla geri getirildi."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Oyunuzu değiştirdiniz!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Oylar başarıyla sıfırlandı"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Oyunuzu verdiniz!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
