--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.models.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Approve selected"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- İşlem Seçin -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Seçilenleri kalıcı olarak sil"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Silinen gönderileri geri al"
-COM_KUNENA_DELETE_SELECTED = "Seçilenleri sil"
-COM_KUNENA_MOVE_SELECTED = "Seçilenleri taşı"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Unsubscribe selected"
+COM_KUNENA_APPROVE_SELECTED="Approve selected"
+COM_KUNENA_BULK_CHOOSE_ACTION="- İşlem Seçin -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Seçilenleri kalıcı olarak sil"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Silinen gönderileri geri al"
+COM_KUNENA_DELETE_SELECTED="Seçilenleri sil"
+COM_KUNENA_MOVE_SELECTED="Seçilenleri taşı"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Unsubscribe selected"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Yayınla"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Yayından Kaldır"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Sil"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Yayınla"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Yayından Kaldır"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Sil"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Forumda Ara"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Arama kıstaslarınızı içeren mesaj bulunmamaktadır."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Bir anahtar kelime en az 3 karakterli olmalıdır!"
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "%s aramanız hiçbir konuda geçmiyor"
+COM_KUNENA_GEN_SEARCH_BOX="Forumda Ara"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Arama kıstaslarınızı içeren mesaj bulunmamaktadır."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Bir anahtar kelime en az 3 karakterli olmalıdır!"
+COM_KUNENA_SEARCH_NORESULTS_FOUND="%s aramanız hiçbir konuda geçmiyor"
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Unfavorite selected"
+COM_KUNENA_UNFAVORITE_SELECTED="Unfavorite selected"
