--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.tpl_blue_eagle.ini
@@ -125,6 +125,13 @@ COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Responsive CSS Yükle"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Mobil cihazlarda kullanılabilir ekranlar için responsive CSS yükle. Bu özelliğin düzgün çalışması için responsive Joomla şablonu gerekiyor."
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Son gönderi konu uzunluğu"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Son eklenen gönderinin kategori görünümündeki karakter sayısını ayarlayın"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
