--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.models.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Схвалити вибране"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- Виберіть дію -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Видалити вибране назовсім"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Відновити вибране"
-COM_KUNENA_DELETE_SELECTED = "Видалити вибране"
-COM_KUNENA_MOVE_SELECTED = "Перемістити вибране"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Відписатись від вибраного"
+COM_KUNENA_APPROVE_SELECTED="Схвалити вибране"
+COM_KUNENA_BULK_CHOOSE_ACTION="- Виберіть дію -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Видалити вибране назовсім"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Відновити вибране"
+COM_KUNENA_DELETE_SELECTED="Видалити вибране"
+COM_KUNENA_MOVE_SELECTED="Перемістити вибране"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Відписатись від вибраного"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Опублікувати"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Скасувати публікацію"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Видалити"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Опублікувати"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Скасувати публікацію"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Видалити"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Пошук форуму"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Не знайдено повідомлень за Вашими умовами пошуку."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Принаймні, одне ключове слово має бути більше 3-х символів."
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "Ваш пошук %s не співпадає з жодною темою."
+COM_KUNENA_GEN_SEARCH_BOX="Пошук форуму"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Не знайдено повідомлень за Вашими умовами пошуку."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Принаймні, одне ключове слово має бути більше 3-х символів."
+COM_KUNENA_SEARCH_NORESULTS_FOUND="Ваш пошук %s не співпадає з жодною темою."
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Видалити вибране з улюбленого"
+COM_KUNENA_UNFAVORITE_SELECTED="Видалити вибране з улюбленого"
