--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.tpl_blue_eagle.ini
@@ -125,6 +125,13 @@ COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Підключити адаптивн
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Підключити адаптивний CSS шаблону для мобільних пристроїв. Ця функція повинна реагувати на  joomla шаблон для коректної роботи."
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Довжина заголовку останнього допису"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Установіть кількість символів для показу заголовку останнього допису в перегляді категорій "
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
