--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Đã phục hồi thành công chủ đề.
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Bạn đã thay đổi bình chọn của bạn!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Đã reset bình chọn thành công"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Bạn đã đóng góp bình chọn của bạn!"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
