--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.ini
@@ -48,6 +48,7 @@ COM_KUNENA_CLASS_SFXDESC = "Các mã hậu tố CSS được áp dụng cho inde
 COM_KUNENA_DESCRIPTIONADD = "Chi tiết:"
 COM_KUNENA_EDIT = "Sửa"
 COM_KUNENA_EDITOR_INSERT = "Chèn"
+; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
 COM_KUNENA_EMAIL_DISABLED = "No emails were sent (request was made from localhost)"
 COM_KUNENA_EMAIL_INVALID = "Diễn đàn đã cố gắng gửi E-mail từ địa chỉ không hợp lệ. Xin vui lòng liên hệ với quản lý web!"
 COM_KUNENA_ERROR1 = "Mục/Chuyên mục phải có một tên"
@@ -124,6 +125,15 @@ COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "Xem chuyên mục '%s'"
 COM_KUNENA_YES = "Có"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "Các phần mở rộng được phép dùng tải lên ảnh đại diện là: %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "Bạn không được quyền xem các thống kê"
+COM_KUNENA_NEW = "Mới"
+; COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "You have reached the maximum number of files allowed (maximum allowed are %d files)"
+; COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Upload"
+; COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Processing..."
+; COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abort"
+; COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Add Files..."
+; COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "You can drop files here or use the browse button"
+; COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Failed to move avatar file to media directory"
+; COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatar file size exceed limit allowed by configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -166,6 +176,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Báo cáo vi phạm"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Báo cáo vi phạm bài viết này cho những người điều hành diễn đàn."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Cảm ơn"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Tôi muốn cảm ơn bài viết này."
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
+; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Khôi phục"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Khôi phục thông tin này."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Đánh dấu là đã đọc tất cả các chuyên mục"
@@ -229,3 +241,47 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Xếp theo số lượt xem"
 COM_KUNENA_TOGGLER_COLLAPSE = "Thu gọn"
 COM_KUNENA_TOGGLER_EXPAND = "Mở rộng"
 COM_KUNENA_USRL_SEARCH = "Tìm thành viên"
+
+COM_KUNENA_ALERT_WARNING_X = "Cảnh báo: %s"
+; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
+; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
+; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+
+; COM_KUNENA_LIB_TIME_NOW = "Just now"
+COM_KUNENA_LIB_TIME_AGO = "%s trước"
+COM_KUNENA_MYPROFILE_LASTLOGIN = "Lần đăng nhập cuối"
+; COM_KUNENA_VIEW_BLOCKED = "Blocked"
+; COM_KUNENA_RANK_BLOCKED = "User is blocked"
+
+; COM_KUNENA_TEASER_TEXT = "Please login to view the answers"
+; COM_KUNENA_STATISTICS = "Statistics"
+COM_KUNENA_MEMBERS = "Thành viên"
+
+COM_KUNENA_FILTERACTIVE = "Lọc"
+; COM_KUNENA_FIELD_LABEL_FILTERCLEAR = "Clear"
+
+; COM_KUNENA_TOPIC_VOTE_RESULTS = "Results"
+; COM_KUNENA_EDITOR_HR = "Horizontal line"
+; COM_KUNENA_EDITOR_HELPLINE_HR = "Horizontal line: [hr]"
+
+COM_KUNENA_ONLINE = "Online"
+; COM_KUNENA_AWAY = "Away"
+; COM_KUNENA_BUSY = "Busy"
+; COM_KUNENA_INVISIBLE = "Invisible"
+; COM_KUNENA_OFFLINE = "Offline"
+; COM_KUNENA_UNKNOWN_STATUS = "Unknown Status"
+; COM_KUNENA_STATUS_TOOLONG = "Status Text is too long."
+; COM_KUNENA_STATUS_SAVED = "Successfully Saved Status Text"
+; COM_KUNENA_STATUS_MESSAGE = "Set Status Message"
+; COM_KUNENA_STATUS_TYP = "Type your message below"
+; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
+; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Đóng"
+COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Lịch sử lệnh cấm"
+; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
+; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
+; COM_KUNENA_STATUS="Status Text"
+; COM_KUNENA_MESSAGE_CREATED="created the topic:"
+; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
+; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
