--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.models.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.models.ini
@@ -11,27 +11,27 @@
 
 ; JROOT/components/com_kunena/models/
 
-COM_KUNENA_APPROVE_SELECTED = "Duyệt"
-COM_KUNENA_BULK_CHOOSE_ACTION = "- Chọn hành động -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Xóa vĩnh viễn"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Khôi phục về vị trí cũ"
-COM_KUNENA_DELETE_SELECTED = "Xóa thành phần đã chọn"
-COM_KUNENA_MOVE_SELECTED = "Dời"
-COM_KUNENA_UNSUBSCRIBE_SELECTED = "Ngừng theo dõi"
+COM_KUNENA_APPROVE_SELECTED="Duyệt"
+COM_KUNENA_BULK_CHOOSE_ACTION="- Chọn hành động -"
+COM_KUNENA_BUTTON_PERMDELETE_LONG="Xóa vĩnh viễn"
+COM_KUNENA_BUTTON_UNDELETE_LONG="Khôi phục về vị trí cũ"
+COM_KUNENA_DELETE_SELECTED="Xóa thành phần đã chọn"
+COM_KUNENA_MOVE_SELECTED="Dời"
+COM_KUNENA_UNSUBSCRIBE_SELECTED="Ngừng theo dõi"
 
 ; JROOT/components/com_kunena/models/announcement.php
 
-COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH = "Công khai"
-COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH = "Không xuất bản"
-COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Xóa bài viết này"
+COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Công khai"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Không xuất bản"
+COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="Xóa bài viết này"
 
 ; JROOT/components/com_kunena/models/search.php
 
-COM_KUNENA_GEN_SEARCH_BOX = "Tìm trong mục"
-COM_KUNENA_SEARCH_ERR_NOPOSTS = "Không tìm thấy bài viết nào có chứa từ khóa của bạn."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Từ khóa ít nhất phải hơn 3 ký tự!"
-COM_KUNENA_SEARCH_NORESULTS_FOUND = "%s không tìm thấy trong bất kỳ chủ đề nào."
+COM_KUNENA_GEN_SEARCH_BOX="Tìm trong mục"
+COM_KUNENA_SEARCH_ERR_NOPOSTS="Không tìm thấy bài viết nào có chứa từ khóa của bạn."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Từ khóa ít nhất phải hơn 3 ký tự!"
+COM_KUNENA_SEARCH_NORESULTS_FOUND="%s không tìm thấy trong bất kỳ chủ đề nào."
 
 ; JROOT/components/com_kunena/models/topics.php
 
-COM_KUNENA_UNFAVORITE_SELECTED = "Gỡ bỏ"
+COM_KUNENA_UNFAVORITE_SELECTED="Gỡ bỏ"
