--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "Chẳng hạn như: webcuaban"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "Địa chỉ trang web"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "Ví dụ: www.webcuaban.com"
 COM_KUNENA_NO_POSTS = "Không có bài viết"
-COM_KUNENA_OFFLINE = "OFFLINE"
-COM_KUNENA_ONLINE = "ĐANG ONLINE"
 COM_KUNENA_PASS = "Mật mã:"
 COM_KUNENA_POLLUSERS_MORE = "Xem thêm"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Thêm tùy chọn thăm dò ý kiến"
 COM_KUNENA_POLL_BUTTON_VOTE = "Bỏ phiếu"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Tiêu đề bình chọn:"
 COM_KUNENA_POLL_NOT_LOGGED = "Chỉ thành viên mới có thể tham gia bình chọn này"
 COM_KUNENA_POLL_NO_VOTE = "Chưa có phiếu"
@@ -302,15 +302,15 @@ COM_KUNENA_TEMPLATE_LEFT = "Trái"
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_COLOR = "Màu viền của trang khi đánh số"
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_COLOR_DESC = "Nhập màu viền của đánh số trang."
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR = "Pagination Border Hover Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR_DESC="Enter the color of pagination link borders when hovered over."
-; COM_KUNENA_TEMPLATE_PAGINATION_COLOR="Pagination Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_COLOR_DESC="Enter the color of pagination links."
-; COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR="Pagination Hover Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR_DESC="Enter the color of pagination links when hovered over."
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR="Pagination Text Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR_DESC="Enter the color of pagination link text."
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR="Pagination Text Hover Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR_DESC="Enter the color of pagination link text when hovered over."
+; COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR_DESC = "Enter the color of pagination link borders when hovered over."
+; COM_KUNENA_TEMPLATE_PAGINATION_COLOR = "Pagination Color"
+; COM_KUNENA_TEMPLATE_PAGINATION_COLOR_DESC = "Enter the color of pagination links."
+; COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR = "Pagination Hover Color"
+; COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR_DESC = "Enter the color of pagination links when hovered over."
+; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR = "Pagination Text Color"
+; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR_DESC = "Enter the color of pagination link text."
+; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR = "Pagination Text Hover Color"
+; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR_DESC = "Enter the color of pagination link text when hovered over."
 COM_KUNENA_TEMPLATE_PROFILEPOSITION_DESC = "Bạn có thể thay đổi vị trí của Ảnh đại diện Hồ sơ trong khi xem chủ đề. Mặc định là <em>Right</em>"
 COM_KUNENA_TEMPLATE_PROFILE_ICON_SET = "Hồ sơ biểu tượng"
 COM_KUNENA_TEMPLATE_PROFILE_ICON_SET_DESC = "Chọn Hồ sơ biểu tượng hiển thị trong diễn đàn"
@@ -498,7 +498,7 @@ COM_KUNENA_MODERATE_DELETE_ALL_POSTS_DESC = "Chọn để xóa tất cả bài v
 COM_KUNENA_MODERATE_DELETE_BAD_AVATAR_DESC = "Chọn để xóa tất cả avatar không phù hợp nội quy"
 COM_KUNENA_MODERATE_DELETE_BAD_PROFILEINFO_DESC = "Chọn để xóa tất cả thông tin hồ sơ"
 COM_KUNENA_MODERATE_DELETE_BAD_SIGNATURE_DESC = "Chọn để xóa những chữ ký không hợp nội quy"
-; COM_KUNENA_MODERATE_REMOVE_BAN_DESC="Expire current ban"
+; COM_KUNENA_MODERATE_REMOVE_BAN_DESC = "Expire current ban"
 
 ; JROOT/components/com_kunena/template/mirage/html/user/edit_profile.php
 
@@ -514,38 +514,38 @@ COM_KUNENA_EDITOR_HELPLINE_SAVE = "Nhấp vào đây để lưu lại"
 COM_KUNENA_TEMPLATE_COLORS = "Màu sắc"
 COM_KUNENA_TEMPLATE_CSS3_COLORS = "Các chọn lựa Css3"
 COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR = "Màu chữ"
-; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Body Color text. like category details"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Hover Category Odd Even Color"
+; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC = "Body Color text. like category details"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW = "Hover Category Odd Row Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC = "Hover Category Odd Row Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN = "Hover Category Odd Even Color"
+; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC = "Hover Category Odd Even Color"
 COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR = "Màu của link"
 COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR = "Màu của phông bài viết"
 COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC = "Màu bài viết"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Backgound Gradient Color top row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN = "Backgound Gradient Color top row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2 = "Backgound Gradient Color Bottom row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC = "Backgound Gradient Color Bottom row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC = "Backgound Gradient Color top row even"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND = "Backgound Gradient Color top row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2 = "Backgound Gradient Color bottom row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC = "Backgound Gradient Color bottom row odd"
+; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC = "Backgound Gradient Color top row odd"
 COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION = "Tùy chỉnh chung"
-; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Header color gradient top"
+; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND = "Header color gradient top"
 COM_KUNENA_TEMPLATE_HEADER_COLOR = "Màu của tiêu đề"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Header color gradient bottom"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Create backbround gradient from Header Color to Header Gradient."
+; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND = "Header color gradient bottom"
+; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC = "Create backbround gradient from Header Color to Header Gradient."
 COM_KUNENA_TEMPLATE_LEGEND_ADMIN_COLOR = "Màu của quản trị viên"
-; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC="Legend color for Administrators."
+; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC = "Legend color for Administrators."
 COM_KUNENA_TEMPLATE_LEGEND_COLORS = "Cấp độ thành viên"
 COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_COLOR = "Màu mặc định chung"
-; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC="Legend color for Global Moderators."
+; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC = "Legend color for Global Moderators."
 COM_KUNENA_TEMPLATE_LEGEND_GUEST_COLOR = "Màu của khách viếng thăm"
-; COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC="Legend color for Guests."
+; COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC = "Legend color for Guests."
 COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR = "Màu của điều hành diễn đàn"
-; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC="Legend color for Moderators."
+; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Legend color for Moderators."
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "Màu thành viên"
-; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC="Legend color for Users."
+; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Legend color for Users."
 COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC = "Đây là giao diện mới cho Kunena 2.0."
 COM_KUNENA_TEMPLATE_TABS = "Tabs"
 
