--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.tpl_blue_eagle.ini
@@ -125,6 +125,13 @@ COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Tải CSS tương tác"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Tải CSS tương tác để khiến template này vừa khớp với màn hình hiển thị trên điện thoại. Chức năng này cần một template tương tác để hoạt động được chính xác. "
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Chiều dài tiêu đề của bài viết cuối cùng"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Số lượng ký tự cho phép hiển thị trong tiêu đề của bài viết mới nhất khi xem chuyên mục"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
