--- a/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "主题成功恢复"
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "您已变了投票！"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "投票已重置"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "您已给自己投票！"
+; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
