--- a/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.tpl_blue_eagle.ini
@@ -125,6 +125,13 @@ COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "载入响应式CSS"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "载入响应式CSS使模板适用于手持设备。该功能需要一个响应式的Joomla模板布局才能工作。"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "上一条发表的主题长度"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "设置上一条主题标题的长度限制"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
