--- a/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.templates.ini
@@ -185,12 +185,12 @@ COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "例如: Kunena"
 COM_KUNENA_MYPROFILE_WEBSITE_URL = "網站網址"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "例如: www.kunena.org"
 COM_KUNENA_NO_POSTS = "沒有任何發表"
-COM_KUNENA_OFFLINE = "離線"
-COM_KUNENA_ONLINE = "上線中"
 COM_KUNENA_PASS = "密碼:"
 COM_KUNENA_POLLUSERS_MORE = "閱讀更多"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "新增投票選項"
 COM_KUNENA_POLL_BUTTON_VOTE = "投票"
+; COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+; COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "投票："
 COM_KUNENA_POLL_NOT_LOGGED = "您還未登入，因此您不能參與此項投票活動。"
 COM_KUNENA_POLL_NO_VOTE = "沒有投票"
