--- a/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.tpl_blue_eagle.ini
@@ -110,21 +110,28 @@ COM_KUNENA_USRL_REGISTERED_USERS = "%s 共有<strong>%d</strong>個註冊會員"
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is the default template for Kunena."
+; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC = "Blue Eagle is the default template for Kunena."
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "顯示 Kunena 選項"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "顯示 active Kunena 選項 inside Kunena template. Disable this feature if you want to use your main menu instead."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "論壇頁首背景"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC = "Define the color of the forum header background"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "滑鼠滑過時的顏色"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "輸入當滑鼠滑過選單標籤上方時顯示的顏色"
 COM_KUNENA_TEMPLATE_SKINNER = "顏色相融於Joomla!佈景主題"
 COM_KUNENA_TEMPLATE_SKINNER_DESC = "自動與預設樣版色彩或和Joomla!佈景主題色彩相融合"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "切換按鈕顏色"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "輸入切換按鈕的顏色"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Load Responsive CSS"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH="Last Post Subject Length"
-; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC="Set the number of characters to display of the last posted subject in the category view"
+; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Load Responsive CSS"
+; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
+; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Last Post Subject Length"
+; COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Set the number of characters to display of the last posted subject in the category view"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
